--- a/ipynb/01a_NotebookBasic.ipynb
+++ b/ipynb/01a_NotebookBasic.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quando si scrive una serie di comandi &egrave; buona pratica utilizzare il comando `print` per tutti i risultati che si vogliono stampare sullo schermo perch&egrave; l'ordine e il numero dei comandi potrebbe essere modificato."
+    "Quando si scrive una serie di comandi &egrave; buona pratica utilizzare il comando `print` per tutti i risultati che si vogliono stampare sullo schermo perch&eacute; l'ordine e il numero dei comandi potrebbe essere modificato."
    ]
   },
   {
