--- a/ipynb/02_Introduzione_a_Python.ipynb
+++ b/ipynb/02_Introduzione_a_Python.ipynb
@@ -35,12 +35,18 @@
     "Lo stile delle celle di testo può essere specificato usando comandi Markdown e/o Latex. \n",
     "\n",
     "Blocchi di codice hanno di fronte il prompt `In[#]` oppure `[#]`, dove `#` è un intero progressivo che identifica la cella.\n",
-    "Per eseguire la cella, schiacciate tenete premuto il tasto Shift(Maiusc) e premete il tasto Enter(Invio)."
+    "Per eseguire la cella, tenete premuto il tasto Shift(Maiusc) e premete il tasto Enter(Invio)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "<div style = \"width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#b8d0d0; margin:20px 0px 10px 10px\">\n",
     "    <h4> Imparare Facendo</h4>\n",
@@ -127,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "&Egrave; buona pratica utilizzare il comando `print` per tutti i risultati che si vogliono stampare sullo schermo perch&egrave; l'ordine e il numero dei comandi potrebbe dover essere modificato durante lo sviluppo del programma."
+    "&Egrave; buona pratica utilizzare il comando `print` per tutti i risultati che si vogliono stampare sullo schermo perch&eacute; l'ordine e il numero dei comandi potrebbe dover essere modificato durante lo sviluppo del programma."
    ]
   },
   {
@@ -136,7 +142,7 @@
    "source": [
     "## Operazioni elementari\n",
     "\n",
-    "Le operazioni elementari come l'addizione (`+`), sottrazione (`-`), moltiplicazione (`*`), divisione (`/`) e esponenziazione (`**`) funzionano come ci si aspetta. \n",
+    "Le operazioni elementari come l'addizione (`+`), sottrazione (`-`), moltiplicazione (`*`), divisione (`/`) e esponenziazione (`**`) funzionano come ci si aspetta.\n",
     "<div style = \"width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#ff0000; margin:20px 0px 10px 10px\">\n",
     "    <h4> Attenzione!</h4>\n",
     "    In un numero reale, il carattere che separa la parte intera da quella decimale è il punto `.`, non la virgola `,`!\n",
@@ -146,7 +152,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "10 + 10000"
@@ -250,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "2 + 2  # un commento sulla stessa di un comando"
+    "2 + 2  # Questo è un commento sulla stessa linea di un comando"
    ]
   },
   {
@@ -260,7 +272,7 @@
     "## Regole di precedenza\n",
     "\n",
     "`a < b` significa che `a` viene eseguita prima di `b`:<br>\n",
-    "<div style=\"font-size:24px\"> &nbsp; &nbsp; &nbsp; &nbsp; Funzioni < parentesi < esponenziazione < moltiplicazione, divisione < addizione, sottrazione</div>"
+    "<div style=\"font-size:24px\">Funzioni < parentesi < esponenziazione < moltiplicazione, divisione < addizione, sottrazione</div>"
    ]
   },
   {
@@ -347,20 +359,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "8 % 5"
    ]
@@ -383,20 +384,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "9 // 2"
    ]
@@ -654,17 +644,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Area = 900\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "width = 20\n",
     "height = 5 * 9\n",
@@ -1069,7 +1051,16 @@
    "source": [
     "La terminologia di Allen Downey (nel suo libro [Think Python](http://www.greenteapress.com/thinkpython/html/index.html)) di funzioni fruttuose e infruttuose distingue fra funzioni che ritornano un valore (=fruitful) e quelle che non lo fanno (=fruitless). Se una funzione non usa il comando `return`, diciamo che non ritorna nulla (In realtà ritorna sempre l'oggetto `None` – anche se il comando `return` manca).\n",
     "\n",
-    "Per esempio, la funzione `greeting`, quando viene chiamata, stampa “Hello World” (ed &egrave; fruitless perché non ritorna alcun valore)."
+    "Per esempio, la funzione `greeting`, quando viene chiamata, stampa “Hello World” (ed &egrave; fruitless perch&eacute;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La terminologia di Allen Downey (nel suo libro [Think Python](http://www.greenteapress.com/thinkpython/html/index.html)) di funzioni fruttuose e infruttuose distingue fra funzioni che ritornano un valore (=fruitful) e quelle che non lo fanno (=fruitless). Se una funzione non usa il comando `return`, diciamo che non ritorna nulla (In realtà ritorna sempre l'oggetto `None` – anche se il comando `return` manca).\n",
+    "\n",
+    "Per esempio, la funzione `greeting`, quando viene chiamata, stampa “Hello World” (ed &egrave; fruitless perch&eacute; non ritorna alcun valore)."
    ]
   },
   {
@@ -1250,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,7 +1370,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cube(var):\n",
+    "def cube(var):             # specifico i parametri su cui agisce la funzione\n",
     "    res = var**3           # Calcolo il risultato valuto\n",
     "    return res             # Restituisco il risultato"
    ]
@@ -1639,6 +1630,136 @@
     "    <img src=\"../Humour/ProgrammerMood.jpg\" width=\"500\" align=\"center\"/><BR>\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sommario 2: Le Fondamenta di Python\n",
+    "\n",
+    "## 🎯 I Quattro Pilastri Fondamentali\n",
+    "\n",
+    "### 1. **Operazioni e Calcoli** - Python come calcolatrice\n",
+    "- **Operatori base**: `+`, `-`, `*`, `/`, `**` (elevamento a potenza)\n",
+    "- **Precedenza**: Parentesi → Potenze → Moltiplicazione/Divisione → Addizione/Sottrazione\n",
+    "- **Punto decimale**: SEMPRE il punto `.` mai la virgola!\n",
+    "- **Operatori speciali**: `//` (divisione intera), `%` (resto/modulo)\n",
+    "\n",
+    "### 2. **Variabili** - Contenitori con nome\n",
+    "- **Creazione**: `nome = valore` (l'UNICO modo per salvare dati)\n",
+    "- **Regole per i nomi**: Solo lettere, numeri e `_`. Mai iniziare con un numero\n",
+    "- **Case sensitive**: `x` e `X` sono variabili DIVERSE\n",
+    "- **Riassegnazione**: Il nuovo valore sovrascrive il vecchio\n",
+    "\n",
+    "### 3. **Moduli** - Estensioni di Python\n",
+    "- **Import necessario**: `import math` prima di usare funzioni matematiche\n",
+    "- **Sintassi di chiamata**: `modulo.funzione(argomento)`\n",
+    "- **Esplorazione**: `dir(modulo)` lista le funzioni, `help(funzione)` spiega l'uso\n",
+    "- **Costanti utili**: `math.pi`, `math.e`\n",
+    "\n",
+    "### 4. **Funzioni** - Blocchi di codice riutilizzabili\n",
+    "```python\n",
+    "def nome_funzione(parametri):\n",
+    "    \"\"\"Documentazione\"\"\"\n",
+    "    # operazioni (indentate di 4 spazi!)\n",
+    "    return risultato\n",
+    "```\n",
+    "- **Input**: Parametri passati alla funzione\n",
+    "- **Output**: Valore restituito con `return`\n",
+    "- **Scope**: Le variabili interne esistono solo dentro la funzione\n",
+    "\n",
+    "## ⚠️ Le Tre Confusioni Mortali\n",
+    "\n",
+    "### 1. **Assegnazione ≠ Equazione**\n",
+    "```python\n",
+    "x = x + 1  # NON è un'equazione matematica!\n",
+    "```\n",
+    "**Interpretazione corretta**:\n",
+    "1. Calcola il valore di `x + 1`\n",
+    "2. Assegna questo nuovo valore a `x`\n",
+    "\n",
+    "### 2. **Print ≠ Return**\n",
+    "- `print()`: Mostra sullo schermo ma NON salva il valore\n",
+    "- `return`: Restituisce il valore per uso futuro\n",
+    "```python\n",
+    "# SBAGLIATO\n",
+    "def calcola():\n",
+    "    print(42)  # Solo visualizza\n",
+    "    \n",
+    "# GIUSTO  \n",
+    "def calcola():\n",
+    "    return 42  # Restituisce per uso\n",
+    "```\n",
+    "\n",
+    "### 3. **Eseguire ≠ Definire**\n",
+    "- **Definire** una funzione: La carica in memoria (non calcola nulla)\n",
+    "- **Chiamare** una funzione: Esegue il codice al suo interno\n",
+    "\n",
+    "## 💡 Pattern Essenziali\n",
+    "\n",
+    "### Come Usare una Funzione Correttamente\n",
+    "1. **Definisci** la funzione (con `def`)\n",
+    "2. **Prepara** gli input necessari\n",
+    "3. **Chiama** la funzione e **assegna** il risultato\n",
+    "4. **Usa** il risultato salvato\n",
+    "\n",
+    "```python\n",
+    "# 1. Definisco\n",
+    "def area_cerchio(r):\n",
+    "    return 3.14159 * r**2\n",
+    "\n",
+    "# 2. Preparo input\n",
+    "raggio = 5\n",
+    "\n",
+    "# 3. Chiamo E assegno\n",
+    "superficie = area_cerchio(raggio)\n",
+    "\n",
+    "# 4. Uso il risultato\n",
+    "print(f\"Area: {superficie}\")\n",
+    "```\n",
+    "\n",
+    "### Operatori di Aggiornamento\n",
+    "- `x += 1` equivale a `x = x + 1`\n",
+    "- `x *= 2` equivale a `x = x * 2`\n",
+    "- Più leggibili e meno soggetti a errori di battitura\n",
+    "\n",
+    "## 🔍 Debug: Come Leggere gli Errori\n",
+    "\n",
+    "| Errore | Significato | Soluzione |\n",
+    "|--------|------------|-----------|\n",
+    "| `NameError` | Variabile non definita | Controlla spelling o assegna prima un valore |\n",
+    "| `SyntaxError` | Struttura sbagliata | Cerca `:` mancanti o parentesi non bilanciate |\n",
+    "| `IndentationError` | Spazi sbagliati | Usa sempre 4 spazi per indentare |\n",
+    "\n",
+    "## 📝 Checklist Prima di Eseguire\n",
+    "\n",
+    "- [ ] Ho importato i moduli necessari?\n",
+    "- [ ] Ho definito tutte le variabili usate?\n",
+    "- [ ] Ho messo `:` alla fine di `def`?\n",
+    "- [ ] Ho indentato il corpo della funzione?\n",
+    "- [ ] Sto usando `return` e non `print` per restituire valori?\n",
+    "- [ ] Ho assegnato il risultato della funzione a una variabile?\n",
+    "\n",
+    "## 🚀 Jupyter: Comandi Essenziali\n",
+    "\n",
+    "- **Shift + Enter**: Esegue la cella e passa alla successiva\n",
+    "- **Doppio click**: Modifica una cella Markdown\n",
+    "- **Tipo di cella**: Code per Python, Markdown per testo\n",
+    "- **`#` commento**: Testo ignorato da Python, utile per spiegazioni\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1658,7 +1779,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   },
   "toc": {
    "base_numbering": 1,
