--- a/ipynb/03_Tipi_di_Dati.ipynb
+++ b/ipynb/03_Tipi_di_Dati.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "<H1 style=\"font-size:50px\">3: Tipi di Dati e Data Structures</H1>\n",
     "\n",
@@ -1083,17 +1089,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[123, 'duck', -42.5, 17, 1j, 'elephant']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = [123, 'duck', -42.5, 17, 0+1j, 'elephant']\n",
     "print(a)"
@@ -1108,17 +1106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['M', 'i', 'c', 'k', 'e', 'y', ' ', 'M', 'o', 'u', 's', 'e']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = list('Mickey Mouse')\n",
     "print(a)"
@@ -1411,7 +1401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il metodo `sort` modifica la lista su cui opera e NON restituisce una lista risultato."
+    "Il metodo `sort` modifica la lista su cui opera e NON restituisce una lista risultato, si dice che agisce `in place`."
    ]
   },
   {
@@ -1624,7 +1614,7 @@
    "source": [
     "### Ntuples\n",
     "\n",
-    "Una *nntupla* (*tuple*) è una sequenza (immutable) di oggetti. Le ntuple si comportano in modo molto simile alle liste con l'eccezione che non possono essere modificate.\n",
+    "Una *ntupla* (*tuple*) è una sequenza (immutable) di oggetti. Le ntuple si comportano in modo molto simile alle liste con l'eccezione che non possono essere modificate.\n",
     "\n",
     "Per esempio, qualunque tipo di oggetto vi può comparire:"
    ]
@@ -1652,7 +1642,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le parentesi non sono necessarie per definire una tuple: una sequenza di oggetti separati da virgole è sufficiente a definire una tuple:"
+    "Le parentesi non sono necessarie per definire una tuple: una sequenza di oggetti separati da virgole è interpretata come una tuple:"
    ]
   },
   {
@@ -2111,6 +2101,114 @@
    "outputs": [],
    "source": [
     "print(tuple(\"Python\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mutabilità, Immutabilità e metodi che modificano oggetti immutabili"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Non posso sostitire una lettera in una stringa:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "st = \"abc\"\n",
+    "st[0] = 'A'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esistono per&ograve; metodi che modificano una stringa, in apparente contaddizione con quanto appena detto:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "st = st.upper()\n",
+    "st"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La contaddizione si risolve notando che il metodo upper crea una nuova stringa. Quando la assegno a `st` distruggo la referenza all'oggetto originale."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "st = \"abc\"\n",
+    "print(id(st))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "st = st.upper()\n",
+    "print(id(st))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La stessa cosa succede con le ntuple e i valori numerici:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val = 1.3\n",
+    "print(val, id(val))\n",
+    "val = -val\n",
+    "print(val, id(val))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se modifico un oggetto mutabile la sua locazione in memoria non viene cambiata."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst = [1, 2, 3]\n",
+    "print(lst, id(lst))\n",
+    "lst[0] = 100\n",
+    "print(lst, id(lst))\n",
+    "lst.append(44)\n",
+    "print(lst, id(lst))"
    ]
   },
   {
@@ -2727,7 +2825,7 @@
    "source": [
     "Ulteriori dettagli:\n",
     "\n",
-    "-   La keyword può essere qualsiasi (immutable) oggetto in Python. Questo include:\n",
+    "-   La keyword può essere qualsiasi oggetto (immutabile) di Python. Questo include:\n",
     "\n",
     "    -   numeri\n",
     "\n",
@@ -3089,102 +3187,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Mutabilità, Immutabilità e metodi che modificano oggetti immutabili"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Non posso sostitire una lettera in una stringa:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "st = \"abc\"\n",
-    "st[0] = 'A'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Esistono per&ograve; metodi che modificano una stringa, in apparente contaddizione con quanto appena detto:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "st = st.upper()\n",
-    "st"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "La contaddizione si risolve notando che il metodo upper crea una nuova stringa. Quando la assegno a `st` distruggo la referenza all'oggetto originale."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "st = \"abc\"\n",
-    "print(id(st))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "st = st.upper()\n",
-    "print(id(st))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "La stessa cosa succede con ntuple e numpy.array."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Se modifico un oggetto mutabile la sua locazione in memoria non viene cambiata."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lst = [1, 2, 3]\n",
-    "print(lst, id(lst))\n",
-    "lst[0] = 100\n",
-    "print(lst, id(lst))\n",
-    "lst.append(44)\n",
-    "print(lst, id(lst))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<div style= 'padding:20px 20px 0px 200px;'>\n",
     "    <img src=\"../Humour/Novice_vs_Experienced_Programmer.jpg\" width=\"300\" align=\"center\"/>\n",
     "</div>"
@@ -3194,122 +3196,152 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sommario 3 : Tipi di Dati e Data Structures in Python\n",
     "\n",
-    "## Principali Tipi di Dati\n",
-    "1. **Tipi numerici**: interi (int), numeri reali (float), numeri complessi (complex)\n",
-    "2. **Variabili logiche**: `True` e `False`\n",
-    "3. **Tipi di dati sequenziali**:\n",
-    "   - **Stringhe** (`str`)\n",
-    "   - **Liste** (`list`)\n",
-    "   - **Ntuple** (`tuple`)\n",
-    "4.  **Dizionari**: strutture dati che associano chiavi a valori.\n",
+    "# Sommario 3: Tipi di Dati e Strutture - Guida Pratica\n",
     "\n",
+    "## 🎯 I Concetti Fondamentali\n",
     "\n",
-    "## Conversione tra Tipi\n",
-    "È possibile convertire una variabile da un tipo all'altro con le funzioni di casting, come `int()`, `float()`, `str()`.\n",
+    "### La Grande Divisione: Mutabile vs Immutabile\n",
+    "**Il concetto più importante di questo capitolo**\n",
     "\n",
-    "## Mutabilità e Immutabilità\n",
-    "- **Tipi mutabili**: il valore può essere modificato in loco (ad esempio, le liste).\n",
-    "- **Tipi immutabili**: il valore non può essere modificato dopo la creazione (ad esempio, le stringhe, i numeri interi).\n",
+    "| **IMMUTABILI** (non modificabili) | **MUTABILI** (modificabili) |\n",
+    "|-----------------------------------|------------------------------|\n",
+    "| Numeri (`int`, `float`, `complex`) | Liste `[1, 2, 3]` |\n",
+    "| Stringhe `\"testo\"` | Dizionari `{'a': 1}` |\n",
+    "| Tuple `(1, 2, 3)` | |\n",
     "\n",
-    "## Uguaglianza e Identità\n",
-    "- **Uguaglianza (`==`)**: verifica se due variabili hanno lo stesso valore.\n",
-    "- **Identità (`is`)**: verifica se due variabili puntano alla stessa area di memoria. `id()` restituisce l'indirizzo in memoria di un oggetto.\n",
+    "**Conseguenza pratica**: \n",
+    "- Immutabile → ogni \"modifica\" crea un nuovo oggetto\n",
+    "- Mutabile → le modifiche avvengono sull'oggetto originale\n",
     "\n",
-    "---\n",
+    "## 📊 I Tipi di Dati Essenziali\n",
     "\n",
+    "### 1. **Numeri** - I mattoni base\n",
+    "- **Interi** (`int`): Precisione infinita → `35**42` funziona!\n",
+    "- **Reali** (`float`): ~15 cifre di precisione → `0.1 * 3 ≠ 0.3` (!)\n",
+    "- **Complessi** (`complex`): Built-in → `1+2j`, parte reale `.real`, immaginaria `.imag`\n",
+    "- **Notazione scientifica**: `1.3e-4` = 1.3 × 10⁻⁴\n",
     "\n",
+    "### 2. **Booleani** - Le decisioni\n",
+    "- Solo due valori: `True` e `False`\n",
+    "- Operatori di confronto: `==`, `!=`, `>`, `<`, `>=`, `<=`\n",
+    "- Operatori logici: `and`, `or`, `not`\n",
+    "- **Attenzione**: `=` assegna, `==` confronta!\n",
     "\n",
-    "### Valori Logici o Variabili di Boole\n",
+    "### 3. **Sequenze** - Collezioni ordinate\n",
     "\n",
-    "Le variabili booleane vengono utilizzate per esprimere condizioni che possono essere verificate in un programma, come ad esempio controllare se una variabile soddisfa una certa condizione.\n",
+    "#### **Operazioni comuni a tutte le sequenze**:\n",
+    "```python\n",
+    "a[i]        # elemento i-esimo (parte da 0!)\n",
+    "a[i:j]      # slice da i a j-1\n",
+    "a[-1]       # ultimo elemento\n",
+    "a[::-1]     # sequenza invertita\n",
+    "len(a)      # lunghezza\n",
+    "x in a      # verifica presenza\n",
+    "a.index(x)  # restituisce la posizione (indice) di `x` in `a`. Se l'elemento non esiste, genera un errore.\n",
     "\n",
-    "### Confronti\n",
+    "```\n",
     "\n",
-    "Gli operatori di confronto permettono di verificare la relazione tra due valori o variabili e restituiscono un valore booleano (`True` o `False`):\n",
+    "#### **Stringhe** (immutabili)\n",
+    "- Delimitatori: `'...'`, `\"...\"`, `'''...'''`\n",
+    "- Metodi utili: `split()`, `join()`, `upper()`, `replace()`\n",
+    "- `+` concatena due liste\n",
+    "- **Non puoi fare**: `s[0] = 'A'` ❌\n",
     "\n",
-    "- `==` : uguaglianza\n",
-    "- `!=` : diversità\n",
-    "- `>` : maggiore\n",
-    "- `>=` : maggiore o uguale\n",
-    "- `<` : minore\n",
-    "- `<=` : minore o uguale\n",
+    "#### **Liste** (mutabili)\n",
+    "- Creazione: `[1, 2, 3]` o `list()`\n",
+    "- Modifica: `L[0] = nuovo` ✓\n",
+    "- Metodi in-place: `append()`, `sort()`, `remove()`\n",
+    "- **Attenzione**: `b = a` crea un alias, non una copia!\n",
     "\n",
+    "#### **Tuple** (immutabili)\n",
+    "- Creazione: `(1, 2, 3)` o solo virgole `1, 2, 3`\n",
+    "- **Trappola**: `(42)` è un numero, `(42,)` è una tupla!\n",
+    "- Uso tipico: return multipli da funzioni\n",
     "\n",
-    "#### Operatori logici\n",
+    "### 4. **Dizionari** - Associazioni chiave-valore\n",
+    "```python\n",
+    "d = {'nome': 'Mario', 'età': 25}\n",
+    "d['nome']           # accesso\n",
+    "d['città'] = 'Roma' # aggiunta\n",
+    "'nome' in d         # verifica chiave\n",
+    "```\n",
+    "- Chiavi: solo immutabili\n",
+    "- Valori: qualsiasi tipo\n",
+    "- Metodi utili: `d.keys()`, `d.values()`, `d.items()`\n",
+    "  \n",
+    "## 🔄 Conversioni tra Tipi\n",
     "\n",
-    "Gli operatori logici `and`, `or` e `not` permettono di combinare più espressioni booleane.\n",
+    "| Da → A | Funzione | Esempio |\n",
+    "|--------|----------|---------|\n",
+    "| Qualsiasi → Intero | `int()` | `int('42')` → `42` |\n",
+    "| Qualsiasi → Float | `float()` | `float('3.14')` → `3.14` |\n",
+    "| Qualsiasi → Stringa | `str()` | `str(42)` → `'42'` |\n",
+    "| Sequenza → Lista | `list()` | `list('abc')` → `['a','b','c']` |\n",
+    "| Sequenza → Tupla | `tuple()` | `tuple([1,2])` → `(1,2)` |\n",
     "\n",
+    "## 💾 Memoria e Copie - Il Concetto Critico\n",
     "\n",
-    "### Sequenze\n",
+    "### Identità vs Uguaglianza\n",
+    "- `a == b`: stesso valore?\n",
+    "- `a is b`: stesso oggetto in memoria?\n",
+    "- `id(a)`: indirizzo di memoria\n",
     "\n",
-    "Stringhe, liste e ntuple sono tipi di dati sequenziali. Le sequenze condividono operazioni come:\n",
+    "### Il Problema delle Copie\n",
+    "```python\n",
+    "# ALIAS (pericolo con mutabili!)\n",
+    "b = a  # b e a puntano allo stesso oggetto\n",
     "\n",
-    "- `a[i]`: restituisce l'*i*-esimo elemento di `a`. Un indice negativo conta li elementi a partire dalla fine della sequenza.\n",
-    "- `a[i:j]`: restituisce gli elementi da *i* a *j*-1 (slicing).\n",
-    "- `len(a)`: restituisce la lunghezza della sequenza.\n",
-    "- `min(a)`, `max(a)`: restituiscono rispettivamente il valore minimo e massimo della sequenza.\n",
-    "- `a.count(x)`: conta quante volte `x` appare nella sequenza.\n",
-    "- `x in a`: verifica se `x` è presente in `a`.\n",
-    "- `index`: restituisce la posizione (indice) di un elemento in una sequenza. Se l'elemento non esiste, genera un errore.\n",
+    "# COPIA INDIPENDENTE\n",
+    "b = a[:]           # per liste (shallow copy)\n",
+    "b = copy.deepcopy(a)  # copia profonda\n",
+    "```\n",
     "\n",
-    "#### Stringhe\n",
+    "## ⚠️ Le 5 Trappole Mortali\n",
     "\n",
-    "Le stringhe sono sequenze immutabili di caratteri.\n",
+    "1. **Indici partono da 0**: `a[0]` è il primo elemento\n",
+    "2. **Slice esclude l'ultimo**: `a[1:3]` prende indici 1 e 2, NON 3\n",
+    "3. **Tupla singola**: Serve la virgola → `(42,)` non `(42)`\n",
+    "4. **Liste come alias**: `b = a` non crea una copia!\n",
+    "5. **Float imprecisi**: `0.1 + 0.2 ≠ 0.3` (errori di arrotondamento)\n",
     "\n",
-    "### Metodi Utili sulle Stringhe\n",
+    "## 🚀 Pattern Utili per la Fisica\n",
     "\n",
-    "- `split()`: divide una stringa in una lista di parole.\n",
-    "- `join()`: unisce una lista di stringhe in una singola stringa.\n",
-    "- `upper()`: restituisce la stringa con tutti i caratteri maiuscoli.\n",
-    "- `replace()`: sostituisce una sottostringa con un'altra.\n",
+    "### Vettore 3D\n",
+    "```python\n",
+    "# Come lista\n",
+    "v = [1.2, -0.3, 3.5]  # v[0]=x, v[1]=y, v[2]=z\n",
     "\n",
-    "## Liste\n",
+    "# Come dizionario (più leggibile)\n",
+    "v = {'x': 1.2, 'y': -0.3, 'z': 3.5}\n",
+    "```\n",
     "\n",
-    "Una **lista** &egrave; una sequenza mutabile di oggetti. Gli oggetti all'interno di una lista possono essere di qualsiasi tipo: numeri interi, stringhe, o anche altre liste.\n",
+    "### Dati sperimentali\n",
+    "```python\n",
+    "# Misure con incertezze\n",
+    "misure = [\n",
+    "    {'valore': 9.81, 'errore': 0.02},\n",
+    "    {'valore': 9.79, 'errore': 0.03}\n",
+    "]\n",
+    "```\n",
     "\n",
-    "### Metodi Utili sulle liste\n",
+    "### Costanti fisiche\n",
+    "```python\n",
+    "costanti = {\n",
+    "    'c': 3e8,        # m/s\n",
+    "    'h': 6.626e-34,  # J·s\n",
+    "    'e': 1.602e-19   # C\n",
+    "}\n",
+    "```\n",
     "\n",
-    "- `+`: concatena due liste.\n",
-    "- `append()`: aggiunge elementi alla fine della lista.\n",
-    "- `insert()`: inserisce elementi in una posizione specifica.\n",
-    "- `remove()`: rimuove elementi dalla lista.\n",
+    "## 📝 Checklist di Debug\n",
     "\n",
-    "### Ordinare una Lista\n",
-    "\n",
-    "- `sort()`: modifica la lista in modo permanente.\n",
-    "- `sorted()`: restituisce una nuova lista ordinata senza modificare l'originale.\n",
-    " \n",
-    "### Il comando `range()`\n",
-    "\n",
-    "Il comando `range(n)` genera una sequenza di numeri interi da `0` a `n-1`. È utile nei cicli `for` per iterare su una sequenza di numeri.\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Ntuple\n",
-    "\n",
-    "Una *ntupla* è una sequenza **immutabile** di oggetti. Le ntuple sono simili alle liste, ma non possono essere modificate dopo la loro creazione.\n",
-    "Le ntuple sono utili quando non si vuole che il contenuto venga modificato, come per i valori di ritorno di una funzione.\n",
-    "\n",
-    "\n",
-    "## Dizionari\n",
-    "\n",
-    "I dizionari sono strutture dati in Python conosciute anche come “associative arrays” o “hash tables”. Un dizionario è un insieme **non ordinato** di coppie **chiave-valore**. Le **chiavi** devono essere oggetti immutabili, come numeri, stringhe o ntuple, mentre i **valori** possono essere di qualsiasi tipo e i dizionari stessi sono mutabili.\n",
-    "I valori possono essere estratti usando la chiave come indice:\n",
-    "\n",
-    "### Metodi utili per i dizionari\n",
-    "\n",
-    "- `keys()`: restituisce tutte le chiavi.\n",
-    "- `values()`: restituisce tutti i valori.\n",
-    "- `items()`: restituisce le coppie chiave-valore.\n",
-    "- `get(key, default)`: restituisce il valore di `key`, o `default` se la chiave non esiste.\n",
-    "- `del()`: elimina una coppia chiave-valore\n",
-    "\n",
-    "\n",
-    "### Controllare la presenza di una chiave o un valore\n",
-    "\n",
-    "Per verificare la presenza di una chiave o un valore in un dizionario usare l'operatore `in`.\n"
+    "- [ ] Sto usando l'indice giusto? (Ricorda: parte da 0)\n",
+    "- [ ] Ho bisogno di una copia o un alias?\n",
+    "- [ ] Il tipo è mutabile o immutabile?\n",
+    "- [ ] Sto usando `=` (assegna) o `==` (confronta)?\n",
+    "- [ ] La mia tupla ha la virgola finale se necessario?\n",
+    "- [ ] Il metodo agisce in-place o restituisce un nuovo oggetto?\n"
    ]
   },
   {
@@ -3337,7 +3369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   },
   "toc": {
    "base_numbering": 1,
