--- a/ipynb/04_control-flow.ipynb
+++ b/ipynb/04_control-flow.ipynb
@@ -109,6 +109,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style= \"padding:20px 20px 0px 50px;\">\n",
+    "    <img src=\"../Images/Control_Flow_2018-07-image9-min-1-1024x840.png\" width=\"600\"/>\n",
+    "\n",
+    "&nbsp;  \n",
+    "   Da [https://365datascience.com/tutorials/python-tutorials/elif-python/](https://365datascience.com/tutorials/python-tutorials/elif-python/)\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div style = \"width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#b8d0d0; margin:20px 0px 10px 10px\">\n",
     "    <h4> Imparare Facendo</h4>\n",
     "<OL>\n",
@@ -135,18 +147,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style= 'padding:20px 20px 0px 150px;'>\n",
-    "    <img src=\"../Humour/ControlFlow1.jpg\" width=\"450\" align=\"center\"/>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## For loop\n",
     "\n",
-    "I `for`-loop permettono di iterare su una sequenza (per esempio una stringa o una lista). Ecco un esempio:"
+    "I `for`-loop permettono di iterare su tutti gli elementi di una sequenza nota (per esempio una stringa o una lista). Ecco un esempio:"
    ]
   },
   {
@@ -184,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I for-loop possono essere usate in modo conciso per creare facilmente sequenze utilizzando la cosiddetta **list comprehension**: "
+    "I `for`-loop possono essere usate in modo conciso per creare facilmente sequenze utilizzando la cosiddetta **list comprehension**: "
    ]
   },
   {
@@ -221,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se è necessario utilizzare contemporaneamente l'indice e il valore di un elemento di una lista, si può utilizzare la funzione `enumerate`:"
+    "Se &egrave; necessario utilizzare contemporaneamente l'indice e il valore degli elementi di una lista, si pu&ograve; utilizzare la funzione `enumerate`:"
    ]
   },
   {
@@ -238,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Un esempio che utilizza un dizionario:"
+    "Un esempio di `for`-loop che utilizza un dizionario:"
    ]
   },
   {
@@ -400,7 +403,7 @@
    "source": [
     "##### Informazioni ulteriori\n",
     "\n",
-    "-   Introduzione ai for-loops in [Python tutorial, section 4.2](http://docs.python.org/tutorial/controlflow.html#for-statements)\n",
+    "-   Introduzione ai `for`-loops in [Python tutorial, section 4.2](http://docs.python.org/tutorial/controlflow.html#for-statements)\n",
     "\n"
    ]
   },
@@ -410,9 +413,9 @@
    "source": [
     "## While loop\n",
     "\n",
-    "\n",
-    "La parola chiave `while` permette di ripetere una operazione mentre una condizione è vera. Dopo la parola chiave `while` deve essere presente una condizione seguita da due punti (:). Nella riga successiva inizia un nuovo blocco di comandi (che quindi deve essere indentato!) che viene eseguito se la condizione è True.<BR>\n",
-    "Supponiamo di voler sapere per quanti anni è necessario tenere 100 euro in un conto bancario per arrivare a 200 euro grazie ad un interesse del 5% annuo. Ecco un programma che lo calcola:"
+    "La parola chiave `while` permette di ripetere una operazione fino a quando una condizione è vera. Dopo la parola chiave `while` deve essere presente una condizione seguita da due punti (:). Nella riga successiva inizia un nuovo blocco di comandi (che quindi deve essere indentato!) che viene eseguito se la condizione è True.<BR>\n",
+    "Supponiamo di voler sapere per quanti anni è necessario tenere 100 euro in un conto bancario per arrivare a 200 euro grazie ad un interesse del 5% annuo. Non sappiamo a priori quanti anni saranno necessari, &egrave; esattamente quello che vogliamo determinare. Sappiamo come verificare se siamo arrivati al risultato cercato.\n",
+    "Il `while`-loop &egrave; lo strumento pi&ugrave; appropriato:"
    ]
   },
   {
@@ -435,7 +438,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Un classico: qual'è la più piccola potenza di 1/2 che posso aggiungere a 1 senza modificarne la rappresentazione come numero reale?"
+    "Un esempio classico: qual'&egrave; la più piccola potenza di 1/2 che posso aggiungere a 1 senza modificarne la rappresentazione come numero reale?\n",
+    "Ovvero qual'&egrave; il più piccolo numero `floating point` della forma `1.+(1/2.)**n` indistinguibile da `1.`?"
    ]
   },
   {
@@ -477,6 +481,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style= \"padding:20px 20px 0px 50px;\">\n",
+    "    <img src=\"../Images/flowchart-of-while-loop-in-python.webp\" width=\"600\"/>\n",
+    "\n",
+    "&nbsp;  \n",
+    "   Da [https://www.scaler.com/topics/python/while-loop-in-python/](https://www.scaler.com/topics/python/while-loop-in-python/)\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div style = \"width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#b8d0d0; margin:20px 0px 10px 10px\">\n",
     "    <h4> Imparare Facendo</h4>\n",
     "<OL>\n",
@@ -500,7 +516,7 @@
    "source": [
     "## Come filtrare una lista/ntupla/dizionario con `if`\n",
     "\n",
-    "Spesso è necessario estrarre da una lista gli elementi che soddisfano una certa condizione. Lo si può ottenere con un `if` *all'interno* della definizione della lista:"
+    "Spesso è necessario estrarre da una lista gli elementi che soddisfano una certa condizione. Lo si può ottenere con un `if` *all'interno* della definizione della lista. Combinando la `list comprehension` con delle condizioni `if` &egrave; possibile generare e/o filtrare liste con grande flessibilit&agrave; in modo estremamente conciso."
    ]
   },
   {
@@ -754,6 +770,205 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Sommario 4: Control Flow - Dirigere il Flusso del Programma\n",
+    "\n",
+    "## 🎯 I Tre Pilastri del Controllo\n",
+    "\n",
+    "### 1. **DECISIONI** (`if-elif-else`)\n",
+    "Eseguire codice in base a condizioni\n",
+    "\n",
+    "### 2. **RIPETIZIONI** (`for`, `while`)\n",
+    "Ripetere operazioni su sequenze o fino a una condizione\n",
+    "\n",
+    "### 3. **INTERRUZIONI** (`break`, `continue`)\n",
+    "Modificare il flusso normale dei loop\n",
+    "\n",
+    "## 🔀 Decisioni: `if-elif-else`\n",
+    "\n",
+    "### Struttura Base\n",
+    "```python\n",
+    "if condizione:          # SEMPRE con :\n",
+    "    # codice indentato  # SEMPRE indentato\n",
+    "elif altra_condizione:  # opzionale\n",
+    "    # altro codice\n",
+    "else:                   # opzionale\n",
+    "    # codice default\n",
+    "```\n",
+    "\n",
+    "### Punti Chiave\n",
+    "- **Ordine conta**: Le condizioni sono verificate sequenzialmente\n",
+    "- **Prima vera vince**: Solo il primo blocco vero viene eseguito\n",
+    "- **Combinazioni**: `and`, `or`, `not` per condizioni complesse\n",
+    "- **Indentazione obbligatoria**: 4 spazi standard\n",
+    "\n",
+    "## 🔁 Ripetizioni: I Loop\n",
+    "\n",
+    "### `for` - Quando sai COSA iterare\n",
+    "```python\n",
+    "for elemento in sequenza:\n",
+    "    # opera su elemento\n",
+    "```\n",
+    "\n",
+    "**Uso tipico**: Iterare su liste, stringhe, range definiti\n",
+    "\n",
+    "### `while` - Quando sai QUANDO fermarti\n",
+    "```python\n",
+    "while condizione:\n",
+    "    # continua finché condizione è True\n",
+    "```\n",
+    "\n",
+    "**Uso tipico**: Continuare fino a convergenza, condizione sconosciuta a priori\n",
+    "\n",
+    "### Quando Usare Quale?\n",
+    "\n",
+    "| Usa `for` quando... | Usa `while` quando... |\n",
+    "|---------------------|----------------------|\n",
+    "| Conosci gli elementi | Non sai quante iterazioni |\n",
+    "| Vuoi processare ogni elemento | Aspetti una condizione |\n",
+    "| Usi `range(n)` | Cerchi convergenza |\n",
+    "\n",
+    "## 🚀 List Comprehension - La Sintassi Potente\n",
+    "\n",
+    "### Pattern Base\n",
+    "```python\n",
+    "[espressione for item in sequenza]\n",
+    "```\n",
+    "\n",
+    "### Con Filtro\n",
+    "```python\n",
+    "[espressione for item in sequenza if condizione]\n",
+    "```\n",
+    "\n",
+    "### Esempi Progressivi\n",
+    "```python\n",
+    "# 1. Base\n",
+    "quadrati = [x**2 for x in range(10)]\n",
+    "\n",
+    "# 2. Con filtro\n",
+    "pari = [x for x in range(20) if x % 2 == 0]\n",
+    "\n",
+    "# 3. Trasformazione e filtro\n",
+    "risultati = [x**2 for x in dati if x > 0]\n",
+    "\n",
+    "# 4. Dizionari\n",
+    "d = {x: x**2 for x in range(5)}\n",
+    "```\n",
+    "\n",
+    "## 🛑 Controllo Fine dei Loop\n",
+    "\n",
+    "### `break` - Uscita immediata\n",
+    "```python\n",
+    "for x in lista:\n",
+    "    if condizione_stop:\n",
+    "        break  # esce dal loop\n",
+    "    # processo normale\n",
+    "```\n",
+    "\n",
+    "### `continue` - Salta al prossimo\n",
+    "```python\n",
+    "for x in lista:\n",
+    "    if condizione_skip:\n",
+    "        continue  # salta resto, vai al prossimo\n",
+    "    # processo normale\n",
+    "```\n",
+    "\n",
+    "## 📐 Pattern Utili per la Fisica\n",
+    "\n",
+    "### Convergenza di Serie\n",
+    "```python\n",
+    "# Serie di Taylor per e^x\n",
+    "somma = 0\n",
+    "termine = 1\n",
+    "n = 0\n",
+    "while abs(termine) > 1e-10:\n",
+    "    somma += termine\n",
+    "    n += 1\n",
+    "    termine *= x/n\n",
+    "```\n",
+    "\n",
+    "### Ricerca di Condizioni\n",
+    "```python\n",
+    "# Tempo di caduta\n",
+    "y = h0\n",
+    "t = 0\n",
+    "dt = 0.01\n",
+    "while y > 0:\n",
+    "    y = h0 - 0.5*g*t**2\n",
+    "    t += dt\n",
+    "```\n",
+    "\n",
+    "### Filtraggio Dati\n",
+    "```python\n",
+    "# Dati entro 3 sigma\n",
+    "validi = [x for x in misure \n",
+    "          if abs(x - media) < 3*sigma]\n",
+    "```\n",
+    "\n",
+    "## ⚠️ Errori Comuni e Soluzioni\n",
+    "\n",
+    "| Errore | Sintomo | Soluzione |\n",
+    "|--------|---------|-----------|\n",
+    "| Dimenticare `:` | `SyntaxError` | Aggiungi `:` dopo condizione |\n",
+    "| Indentazione errata | `IndentationError` | Usa sempre 4 spazi |\n",
+    "| Loop infinito | Programma bloccato | Controlla condizione `while` |\n",
+    "| `=` invece di `==` | Assegnazione in `if` | Usa `==` per confronti |\n",
+    "| Range sbagliato | Manca ultimo elemento | Ricorda: `range(n)` va da 0 a n-1 |\n",
+    "\n",
+    "## 💡 Best Practices\n",
+    "\n",
+    "### 1. Preferisci `for` a `while` quando possibile\n",
+    "```python\n",
+    "# Meglio\n",
+    "for i in range(10):\n",
+    "    print(i)\n",
+    "\n",
+    "# Evita\n",
+    "i = 0\n",
+    "while i < 10:\n",
+    "    print(i)\n",
+    "    i += 1\n",
+    "```\n",
+    "\n",
+    "### 2. Usa list comprehension per trasformazioni semplici\n",
+    "```python\n",
+    "# Meglio\n",
+    "quadrati = [x**2 for x in numeri]\n",
+    "\n",
+    "# Più verboso\n",
+    "quadrati = []\n",
+    "for x in numeri:\n",
+    "    quadrati.append(x**2)\n",
+    "```\n",
+    "\n",
+    "### 3. Evita loop annidati profondi\n",
+    "Se hai più di 2-3 livelli, considera di estrarre funzioni\n",
+    "\n",
+    "## 🔍 Debug Checklist\n",
+    "\n",
+    "- [ ] Ho messo `:` dopo ogni `if`, `elif`, `else`, `for`, `while`?\n",
+    "- [ ] L'indentazione è consistente (4 spazi)?\n",
+    "- [ ] Il mio `while` ha una condizione che può diventare `False`?\n",
+    "- [ ] Sto usando `==` per confrontare, non `=`?\n",
+    "- [ ] Il mio `range()` include tutti i valori necessari?\n",
+    "- [ ] Ho considerato cosa succede con liste vuote?\n",
+    "\n",
+    "## 📊 Schema Decisionale\n",
+    "\n",
+    "```\n",
+    "Devo ripetere qualcosa?\n",
+    "    ├─ SÌ → Conosco gli elementi/numero?\n",
+    "    │       ├─ SÌ → usa FOR\n",
+    "    │       └─ NO → usa WHILE\n",
+    "    └─ NO → Devo scegliere?\n",
+    "            ├─ SÌ → usa IF-ELIF-ELSE\n",
+    "            └─ NO → codice sequenziale\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Sommario 4: Control Flow\n",
     "\n",
     "## Obiettivi\n",
@@ -809,7 +1024,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   },
   "toc": {
    "base_numbering": 1,
