--- a/ipynb/05_input-output-files.ipynb
+++ b/ipynb/05_input-output-files.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "<H1 style=\"font-size:50px\">5: Input e Output</H1>\n",
     "\n",
@@ -302,7 +308,7 @@
    "metadata": {},
    "source": [
     "#### Tabulare dati con le f-strings\n",
-    "Il simbolo >, <, ^ allinea le variabili a destra, sinistra, centro dello spazio disponibile. L'allineamento a destra è il default per le variabili numeriche; l'allineamento a sinistra è il default per quasi tutte gli altri tipi di variabili."
+    "Il simbolo >, <, ^ allinea le variabili a destra, sinistra, centro dello spazio disponibile. L'allineamento a destra &egrave; il default per le variabili numeriche; l'allineamento a sinistra &egrave; il default per quasi tutte gli altri tipi di variabili."
    ]
   },
   {
@@ -324,14 +330,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Separando più chiaramente le colonne"
+    "Separando pi&ugrave; chiaramente le colonne con linee verticali"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------\n",
+      "|   dato 1 |   dato 2 |   dato 3 |\n",
+      "----------------------------------\n",
+      "|        1 |        2 |        3 |\n",
+      "|        5 |        6 |        7 |\n",
+      "|        8 |        9 |       10 |\n",
+      "----------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "Table = [[1, 2, 3], [5, 6, 7], [8, 9, 10]]\n",
     "info = [\"dato 1\", \"dato 2\", \"dato 3\"]\n",
@@ -347,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Effetto di allineamenti diversi:"
+    "Esempio dell'utilizzo di allineamenti diversi nelle diverse colonne:"
    ]
   },
   {
@@ -592,7 +612,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Più in dettaglio, il file viene aperto con il comando `open`. L'oggetto file aperto viene assegnato alla variabile `out_file`. Il testo viene scritto nel file usando il metodo `out_file.write`. Si noti che nell'esempio più sopra, al metodo `write` è stata passata una stringa. Si possono usare, ovviamente, tutte specificazioni di formato discusse in precedenza — si veda [formatted printing](#Formatted-printing) e [new style formatting](#New-style-string-formatting). È buona pratica usare `close()` su tutti i files in cui si è finito di leggere e scrivere. Se un programma Python finisce in modo controllato (cioè non per una caduta di tensione o un improbabile bug del linguaggio o del sistema operativo) tutti i files aperti vengono chiusi non appena i file objects vengono distrutti. Tuttavia, chiuderli esplicitamente non appena possibile è uno stile migliore di programmazione.\n",
+    "Pi&ugrave; in dettaglio, il file viene aperto con il comando `open`. L'oggetto file aperto viene assegnato alla variabile `out_file`. Il testo viene scritto nel file usando il metodo `out_file.write`. Si noti che nell'esempio pi&ugrave; sopra, al metodo `write` &egrave; stata passata una stringa. Si possono usare, ovviamente, tutte le specificazioni di formato discusse in precedenza — si veda [formatted printing](#Formatted-printing) e [new style formatting](#New-style-string-formatting). È buona pratica usare `close()` su tutti i files in cui si &egrave; finito di leggere e scrivere. Se un programma Python finisce in modo controllato (cio&egrave; non per una caduta di tensione o un improbabile bug del linguaggio o del sistema operativo) tutti i files aperti vengono chiusi non appena i file objects vengono distrutti. Tuttavia, chiuderli esplicitamente non appena possibile &egrave; uno stile migliore di programmazione.\n",
     "\n",
     "### Metodi ed esempi di lettura e scrittura su file\n",
     "\n",
@@ -607,7 +627,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il metodo `write` non aggiunge il carattere `newline (\\n)` alla fine di ogni operazione di scrittura"
+    "Il metodo `write` non aggiunge il carattere `newline (\\n)` alla fine di ogni operazione di scrittura. &Egrave; necessario inserirlo esplicitamente."
    ]
   },
   {
@@ -656,7 +676,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "È sbagliato passare a `write` più stringhe separate da virgole. `write` accetta un solo argomento."
+    "&Egrave; un errore passare a `write` più stringhe separate da virgole. `write` accetta un solo argomento."
    ]
   },
   {
@@ -667,6 +687,24 @@
    "source": [
     "f3 = open('myfile3.txt', 'w')\n",
     "f3.write('This is the first line.\\n','This is the second line.\\n','This is the third and last line.')\n",
+    "f3.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Un metodo corretto &egrave;, per esempio:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f3 = open('myfile3.txt', 'w')\n",
+    "f3.write('This is the first line.\\n'+'This is the second line.\\n'+'This is the third and last line.')\n",
     "f3.close()"
    ]
   },
@@ -747,7 +785,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si noti che `readlines()` immagazzina tutto il file in una lista di stringhe. Non è un problema se si è sicuri che il file è piccolo e che può essere contenuto nella memoria disponibile.\n",
+    "Si noti che `readlines()` immagazzina tutto il file in una lista di stringhe. Non &egrave; un problema se si &egrave; sicuri che il file &egrave; piccolo e che pu&ograve; essere contenuto nella memoria disponibile.\n",
     "\n",
     "In questo caso, possiamo chiudere il file prima di processarne il contenuto:"
    ]
@@ -771,7 +809,7 @@
    "source": [
     "#### Come iterare sulle linee (file object)\n",
     "\n",
-    "Python considera un file come una lista di linee cos&igrave; come una stringa viene considerata come una lista di caratteri. Possiamo quindi utlizzare la `list comprehension` per leggere un file linea per linea. Questo approccio è adatto anche a files grandi e produce un codice compatto:"
+    "Python considera un file come una lista di linee cos&igrave; come una stringa viene considerata come una lista di caratteri. Possiamo quindi utlizzare la `list comprehension` per leggere un file linea per linea. Questo approccio &egrave; adatto anche a files grandi e produce un codice compatto:"
    ]
   },
   {
@@ -790,7 +828,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In questo caso, il \"file handle\" `f` agisce come un iteratore e restituisce la linea seguente a ogni iterazione del  for-loop fino alla fine del file (quando il for-loop finisce). In alternativa si può usare il metodo `readline` che restituisce una riga alla volta:"
+    "In questo caso, il \"file handle\" `f` agisce come un iteratore e restituisce la linea seguente a ogni iterazione del  for-loop fino alla fine del file (quando il for-loop finisce). In alternativa si pu&ograve; usare il metodo `readline` che restituisce una riga alla volta:"
    ]
   },
   {
@@ -836,7 +874,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Questa notazione chiude automaticamente il file alla fine delle operazioni contenute nel blocco `with` anche se il programma si fermasse per un errore. Il comando `close` non è più necessario."
+    "Questa notazione chiude automaticamente il file alla fine delle operazioni contenute nel blocco `with` anche se il programma si fermasse per un errore. Il comando `close` non è pi&ugrave; necessario."
    ]
   },
   {
@@ -863,7 +901,7 @@
     "tags": []
    },
    "source": [
-    "Si pu&ograve; aprire un file già esistente utilizzando il path assoluto:"
+    "Si pu&ograve; aprire un file gi&agrave; esistente utilizzando il path assoluto:"
    ]
   },
   {
@@ -918,7 +956,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si pu&ograve; aprire un file già esistente utilizzando il path relativo:"
+    "Si pu&ograve; aprire un file gi&agrave; esistente utilizzando il path relativo:"
    ]
   },
   {
@@ -977,40 +1015,190 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sommario 5: Input e Output\n",
+    "# Sommario 5: Input/Output - Comunicare con il Mondo Esterno\n",
     "\n",
+    "## 🎯 I Tre Pilastri dell'I/O\n",
     "\n",
-    "## 5.1 Stampare sullo standard output\n",
+    "1. **OUTPUT su schermo** - Comunicare con l'utente\n",
+    "2. **FILES** - Salvare e recuperare dati\n",
+    "3. **FORMATTAZIONE** - Presentare i dati in modo leggibile\n",
     "\n",
-    "### `print` semplice\n",
-    "- La funzione `print` stampa informazioni sullo standard output, solitamente lo schermo.\n",
-    "- Gli oggetti da stampare sono separati da una virgola e automaticamente separati da uno spazio.\n",
-    "- `print` va a capo alla fine di ogni chiamata, ma questo comportamento può essere modificato usando il parametro `end=`.\n",
+    "## 📺 Output su Schermo\n",
     "\n",
-    "### f-strings\n",
-    "- Le f-strings sono un metodo recente e semplice per specificare il formato di stampa.\n",
-    "- Si inserisce `f` prima della stringa, e le variabili con formato sono racchiuse tra parentesi graffe `{}`.\n",
-    "- Specificatori di formato:\n",
-    "   - {nome_var}:W.DF per i numeri reali ({ }:W.F per gli interi) dove W (width, opzionale) è il numero minimo di caratteri; D (digits, necessaria) è il numero di cifre dopo il punto decimale; F definisce lo stile. Per esempio\n",
-    "      - `f`: punto mobile\n",
-    "      - `e`: notazione esponenziale\n",
-    "      - `d`: intero\n",
-    "      - `s`: stringa\n",
+    "### Print Base\n",
+    "```python\n",
+    "print(var1, var2, ...)  # Separa con spazi, va a capo\n",
+    "print(..., end=\"\")      # Non va a capo\n",
+    "print(..., sep=\";\")     # Cambia separatore\n",
+    "```\n",
     "\n",
-    "      - Allineamento\n",
-    "         - Allineamento con `>`, `<`, `^` per destra, sinistra e centro.\n",
-    "         - Stampa di tabelle con allineamento specifico.\n",
+    "### F-strings: Il Metodo Moderno\n",
+    "```python\n",
+    "f\"{variabile:formato}\"\n",
+    "```\n",
     "\n",
-    "### Scrittura su file\n",
-    "1. Aprire un file in modalità scrittura con `open(\"nomefile\", \"w\")`.\n",
-    "2. Usare `write()` per scrivere nel file.\n",
-    "3. Chiudere il file con `close()`.\n",
+    "#### Formati Essenziali\n",
     "\n",
-    "### Lettura da file\n",
-    "1. Aprire un file in modalità lettura con `open(\"nomefile\", \"r\")`.\n",
-    "2. Usare `read()` oppure `readlines()` per leggere il contenuto del file.\n",
-    "3. Usare la `list comprehension` per leggere il contenuto del file una riga alla volta.\n",
-    "4. Chiudere il file con `close()`.\n"
+    "| Tipo | Formato | Esempio | Output |\n",
+    "|------|---------|---------|--------|\n",
+    "| Float | `:.2f` | `f\"{3.14159:.2f}\"` | `3.14` |\n",
+    "| Esponenziale | `:.2e` | `f\"{1000:.2e}\"` | `1.00e+03` |\n",
+    "| Intero | `:d` | `f\"{42:d}\"` | `42` |\n",
+    "| Stringa | `:s` | `f\"{'test':s}\"` | `test` |\n",
+    "\n",
+    "#### Controllo Spazio e Allineamento\n",
+    "```python\n",
+    "f\"{valore:larghezza.precisione_tipo}\"\n",
+    "f\"{3.14:10.2f}\"   # ______3.14 (10 caratteri totali)\n",
+    "f\"{testo:>10}\"    # Allinea a destra\n",
+    "f\"{testo:<10}\"    # Allinea a sinistra  \n",
+    "f\"{testo:^10}\"    # Centra\n",
+    "```\n",
+    "\n",
+    "## 📁 Lavorare con i File\n",
+    "\n",
+    "### Il Ciclo Fondamentale\n",
+    "\n",
+    "```python\n",
+    "# 1. APRI\n",
+    "file = open(\"nome.txt\", modo)\n",
+    "\n",
+    "# 2. USA\n",
+    "contenuto = file.read()  # o write()\n",
+    "\n",
+    "# 3. CHIUDI\n",
+    "file.close()\n",
+    "```\n",
+    "\n",
+    "### Modi di Apertura\n",
+    "\n",
+    "| Modo | Significato | Uso |\n",
+    "|------|-------------|-----|\n",
+    "| `\"r\"` | Read (lettura) | File esistente |\n",
+    "| `\"w\"` | Write (scrittura) | Crea/sovrascrive |\n",
+    "| `\"a\"` | Append (aggiunta) | Aggiunge in fondo |\n",
+    "\n",
+    "### Metodi di Lettura\n",
+    "\n",
+    "```python\n",
+    "# TUTTO in una stringa\n",
+    "testo = file.read()\n",
+    "\n",
+    "# Lista di righe\n",
+    "righe = file.readlines()\n",
+    "\n",
+    "# Riga per riga (efficiente)\n",
+    "for riga in file:\n",
+    "    processa(riga)\n",
+    "```\n",
+    "\n",
+    "### Pattern Sicuro con `with`\n",
+    "```python\n",
+    "with open(\"file.txt\", \"r\") as f:\n",
+    "    contenuto = f.read()\n",
+    "# File chiuso automaticamente!\n",
+    "```\n",
+    "\n",
+    "## 🔧 Pattern Pratici per la Fisica\n",
+    "\n",
+    "### Salvare Dati Sperimentali\n",
+    "```python\n",
+    "# Scrivere misure con errori\n",
+    "with open(\"dati.txt\", \"w\") as f:\n",
+    "    f.write(\"# Tempo(s) Posizione(m) Errore(m)\\n\")\n",
+    "    for t, x, err in misure:\n",
+    "        f.write(f\"{t:8.3f} {x:12.6f} {err:10.6f}\\n\")\n",
+    "```\n",
+    "\n",
+    "### Leggere Dati Numerici\n",
+    "```python\n",
+    "dati = []\n",
+    "with open(\"misure.txt\", \"r\") as f:\n",
+    "    for linea in f:\n",
+    "        if not linea.startswith(\"#\"):  # Salta commenti\n",
+    "            valori = linea.split()\n",
+    "            dati.append([float(v) for v in valori])\n",
+    "```\n",
+    "\n",
+    "### Creare Tabelle Formattate\n",
+    "```python\n",
+    "# Intestazione\n",
+    "print(f\"{'Massa(kg)':>10} {'Velocità(m/s)':>15} {'Energia(J)':>12}\")\n",
+    "print(\"-\" * 40)\n",
+    "\n",
+    "# Dati\n",
+    "for m, v in dati:\n",
+    "    E = 0.5 * m * v**2\n",
+    "    print(f\"{m:10.2f} {v:15.3f} {E:12.2e}\")\n",
+    "```\n",
+    "\n",
+    "## ⚠️ Errori Comuni e Soluzioni\n",
+    "\n",
+    "| Problema | Causa | Soluzione |\n",
+    "|----------|-------|-----------|\n",
+    "| `FileNotFoundError` | File non esiste | Controlla path e nome |\n",
+    "| Caratteri strani | Encoding errato | Usa `encoding='utf-8'` |\n",
+    "| File vuoto dopo scrittura | Manca `close()` | Usa `with` o chiudi manualmente |\n",
+    "| `\\n` visibile | Print di `readlines()` | Usa `strip()` per rimuovere |\n",
+    "| Percorsi Windows | Backslash `\\` | Usa raw string `r\"C:\\path\"` |\n",
+    "\n",
+    "## 📐 Scelta del Formato\n",
+    "\n",
+    "### Quando Usare Quale Metodo?\n",
+    "\n",
+    "| Situazione | Metodo | Perché |\n",
+    "|------------|--------|---------|\n",
+    "| Output semplice | `print(a, b)` | Veloce, debug |\n",
+    "| Dati formattati | f-strings | Moderno, leggibile |\n",
+    "| Template complessi | `.format()` | Riutilizzabile |\n",
+    "| File piccoli | `read()` | Semplice |\n",
+    "| File grandi | `for line in file` | Efficiente |\n",
+    "\n",
+    "## 💡 Best Practices\n",
+    "\n",
+    "### 1. Sempre Usare `with` per i File\n",
+    "```python\n",
+    "# SÌ\n",
+    "with open(\"file.txt\") as f:\n",
+    "    dati = f.read()\n",
+    "\n",
+    "# NO\n",
+    "f = open(\"file.txt\")\n",
+    "dati = f.read()\n",
+    "# Rischio: file non chiuso se c'è errore\n",
+    "```\n",
+    "\n",
+    "### 2. Commenti nei File di Dati\n",
+    "```python\n",
+    "# Scrivi metadati\n",
+    "f.write(\"# Data: 2024-01-15\\n\")\n",
+    "f.write(\"# Unità: SI\\n\")\n",
+    "f.write(\"# Colonne: tempo(s) posizione(m)\\n\")\n",
+    "```\n",
+    "\n",
+    "## 🔍 Checklist Debug I/O\n",
+    "\n",
+    "- [ ] Il file esiste nel percorso specificato?\n",
+    "- [ ] Ho i permessi di lettura/scrittura?\n",
+    "- [ ] Sto usando l'encoding corretto?\n",
+    "- [ ] Ho chiuso il file dopo l'uso?\n",
+    "- [ ] Le righe hanno `\\n` alla fine?\n",
+    "- [ ] I percorsi usano `/` o raw strings?\n",
+    "- [ ] Il formato è appropriato per i dati?\n",
+    "\n",
+    "## 📊 Schema Decisionale\n",
+    "\n",
+    "```\n",
+    "Devo salvare dati?\n",
+    "├─ Pochi e semplici → print su schermo\n",
+    "├─ Da riusare → scrivi su file\n",
+    "└─ Strutturati → considera CSV/JSON\n",
+    "\n",
+    "Devo leggere dati?\n",
+    "├─ File piccolo → read() tutto\n",
+    "├─ File grande → leggi riga per riga\n",
+    "└─ Dati numerici → considera NumPy\n",
+    "```\n"
    ]
   },
   {
@@ -1038,7 +1226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   },
   "toc": {
    "base_numbering": 1,
