--- a/ipynb/06extra_Come_Passare_Argomenti.ipynb
+++ b/ipynb/06extra_Come_Passare_Argomenti.ipynb
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il C++ permette di passare argomenti come referenza aggiungendo un ampersand davanti al nome dell'argmento nella definizione della funzione:\n",
+    "Il C++ permette di passare argomenti come referenza aggiungendo un ampersand davanti al nome dell'argomento nella definizione della funzione:\n",
     "\n",
     "```cpp\n",
     "#include <stdio.h>\n",
