--- a/ipynb/08_plots.ipynb
+++ b/ipynb/08_plots.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il modo più semplice per iniziare un grafico è la funzione `subplots`. La chiamata a `subplots` restituisce un oggetto di tipo `Figure`, che corrisponde alla pagina in cui il plot (o il gruppo di plot) è contenuto, e uno o più oggetti di tipo `AxesSubplot` che corrispondono ai singoli grafici. I plot si costruiscono applicando i metodi opportuni ai corrispondenti oggetti.<BR>\n",
+    "Il modo pi&ugrave; semplice per iniziare un grafico &egrave; la funzione `subplots`. La chiamata a `subplots` restituisce un oggetto di tipo `Figure`, che corrisponde alla pagina in cui il plot (o il gruppo di plot) &egrave; contenuto, e uno o più oggetti di tipo `AxesSubplot` che corrispondono ai singoli grafici. I plot si costruiscono applicando i metodi opportuni ai corrispondenti oggetti.<BR>\n",
     "In Jupyter il grafico viene mostrato quando si esegue la cella. Se non chiamiamo alcun metodo per costruire il grafico, viene mostrato un plot elementare con parametri di default.\n",
     "    \n",
     "Nella cella seguente l'oggetto di tipo `Figure` viene assegnato alla variabile `fig`. L'oggetto (o gli oggetti) di tipo  `AxesSubplot` viene assegnato\n",
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nel caso ci siano più plot questi vengono assegnati ad una ntupla:"
+    "Nel caso ci siano pi&ugrave; plot questi vengono assegnati ad una ntupla:"
    ]
   },
   {
@@ -182,7 +182,7 @@
    "metadata": {},
    "source": [
     "### Estremi degli assi\n",
-    "Di default, Matplotlib sceglie gli estremi degli assi in modo che tutti i punti che vengono passati al comando `plot` o `scatterplot` siano visibili nel grafico. L'utente può però fissare gli estremi degli assi con `set_xlim`, `set_ylim`. I punti che non rientrano nei range definiti da `set_xlim`, `set_ylim` non vengono mostrati."
+    "Di default, Matplotlib sceglie gli estremi degli assi in modo che tutti i punti che vengono passati al comando `plot` o `scatterplot` siano visibili nel grafico. L'utente pu&ograve; per&ograve; fissare gli estremi degli assi con `set_xlim`, `set_ylim`. I punti che non rientrano nei range definiti da `set_xlim`, `set_ylim` non vengono mostrati."
    ]
   },
   {
@@ -203,7 +203,7 @@
    "source": [
     "### Griglie\n",
     "\n",
-    "Le griglie sono linee chiare, parallele agli assi coordinati, che facilitano la lettura delle coordinate dei punti di un grafico. Il default è che non vengano disegnate."
+    "Le griglie sono linee chiare, parallele agli assi coordinati, che facilitano la lettura delle coordinate dei punti di un grafico. Il default &egrave; che non vengano disegnate."
    ]
   },
   {
@@ -254,7 +254,7 @@
    "source": [
     "## Fare il grafico di una funzione nota `f(x)`\n",
     "\n",
-    "Il modo più semplice per fare il grafico di una funzione `f(x)`è:\n",
+    "Il modo più semplice per fare il grafico di una funzione `f(x)` &egrave;:\n",
     "\n",
     "- Generare un set apportuno `xval` di ascisse in cui calcolare i valori di `f`, tipicamente usando `arange` o `linspace`.\n",
     "- Scrivere una funzione che restituisca i valori `yval` di `f(x)` nei punti `xval`.\n",
@@ -305,7 +305,7 @@
     "\n",
     "### Curve multiple in un singolo plot\n",
     "\n",
-    "È sufficiente dare il comando `plot` su un singolo `ax` per tutte le curve da disegnare"
+    "&Egrave; sufficiente dare il comando `plot` su un singolo `ax` per tutte le curve da disegnare"
    ]
   },
   {
@@ -328,8 +328,8 @@
    "source": [
     "### Plot multipli in una sola figura.\n",
     "\n",
-    "È necessario creare, nella chiamata a `plt.subplots`, tanti oggetti di tipo `ax` quanti sono i plot che si vogliono ottenere.\n",
-    "Ciascuno dei comandi successivi si riferirà ad uno specifico oggetto `ax`."
+    "&Egrave; necessario creare, nella chiamata a `plt.subplots`, tanti oggetti di tipo `ax` quanti sono i plot che si vogliono ottenere.\n",
+    "Ciascuno dei comandi successivi si riferir&agrave; ad uno specifico oggetto `ax`."
    ]
   },
   {
@@ -385,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Un'altra possibilità è assegnare l'ntupla degli ax ad un unica variabile e poi utilizzare gli indici. In questo modo è possibile fare un ciclo `for` sui plot:"
+    "Un'altra possibilit&agrave; &egrave; assegnare l'ntupla degli ax ad un unica variabile e poi utilizzare gli indici. In questo modo &egrave; possibile fare un ciclo `for` sui plot:"
    ]
   },
   {
@@ -491,7 +491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Di default vengono utilizzati logaritmi in base 10. È possibile specificare una base diversa:"
+    "Di default vengono utilizzati logaritmi in base 10. &Egrave; possibile specificare una base diversa:"
    ]
   },
   {
@@ -645,8 +645,8 @@
    "source": [
     "### Legende\n",
     "\n",
-    "La legenda per ciascuna curva viene passata con il parametro `label` nella chiamata a `plot`. Le curve prive di `label` non vengono incluse nella legenda.\n",
-    "    Se nessuna delle curve ha un `label` si ha un errore."
+    "La legenda per ciascuna curva viene passata con il parametro `label` nella chiamata a `plot`. Le legende vengono mostrate invocando il metodo `legend` sul singolo garfico. Le curve prive di `label` non vengono incluse nella legenda.\n",
+    "Se viene chiamato `legend` e nessuna delle curve ha un `label` si ha un errore."
    ]
   },
   {
@@ -725,7 +725,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il prefisso `r` davanti alle stringhe di testo inibisce l'interpretazione dei caratteri di \"escape\" come caratteri speciali. Importante perchè LaTeX usa il carattere \"\\\\\" per introdurre i comandi e \"\\\\\" è il carattere standard di \"escape\"."
+    "Il prefisso `r` davanti alle stringhe di testo inibisce l'interpretazione dei caratteri di \"escape\" come caratteri speciali. Importante perchè LaTeX usa il carattere \"\\\\\" per introdurre i comandi e \"\\\\\" &egrave; il carattere standard di \"escape\"."
    ]
   },
   {
@@ -767,7 +767,7 @@
     "    <h4> Imparare Facendo</h4>\n",
     "    \n",
     "<OL>\n",
-    "<LI>Fate l'istogramma dell'array a = np.array([22,87,5,43,56,73,55,54,11,20,51,5,79,31,27]). Qual'è un <b>range</b> ragionevole? Variate il numero di bin fra 1 e 10.\n",
+    "<LI>Fate l'istogramma dell'array a = np.array([22,87,5,43,56,73,55,54,11,20,51,5,79,31,27]). Qual'&egrave; un <b>range</b> ragionevole? Variate il numero di bin fra 1 e 10.\n",
     "</OL>\n",
     "</div>"
    ]
@@ -819,10 +819,10 @@
    "source": [
     "## Plot parametrici\n",
     "\n",
-    "Spesso per descrivere una curva esprimiamo le coordinate `y` dei punti sulla curva in funzione delle loro coordinate `x`. Per esempio una semicirconferenza centrata nell'origine è descritta dalla relazione $ y(x) = \\sqrt{r^2 - x^2}$, dove $r$ è il raggio.<BR>\n",
-    "Un modo alternativo di costruire i punti sul cerchio di raggio $r$ è di notare che possiamo usare come parametro o coordinata l'angolo del punto rispetto all'asse $\\hat{x}$ come:\n",
+    "Spesso per descrivere una curva esprimiamo le coordinate `y` dei punti sulla curva in funzione delle loro coordinate `x`. Per esempio una semicirconferenza centrata nell'origine &egrave; descritta dalla relazione $ y(x) = \\sqrt{r^2 - x^2}$, dove $r$ &egrave; il raggio.<BR>\n",
+    "Un modo alternativo di costruire i punti sul cerchio di raggio $r$ &egrave; di notare che possiamo usare come parametro o coordinata l'angolo del punto rispetto all'asse $\\hat{x}$ come:\n",
     "    $$ x(\\theta) = r \\cos\\theta,\\qquad y(\\theta) = r \\sin\\theta$$\n",
-    "Se creiamo due array sufficientemente fitti in questo modo, possiamo disegnare una circonferenza."
+    "Se creiamo due array sufficientemente fitti in questo modo, possiamo disegnare una circonferenza nel modo seguente:"
    ]
   },
   {
@@ -917,7 +917,7 @@
    "source": [
     "<div style = \"width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#ff0000; margin:20px 0px 10px 10px\">\n",
     "    <h4> Attenzione!</h4>\n",
-    "La possibilità di fare il grafico di una qualsiasi funzione con pochissima fatica richiede di cambiare completamente l'approccio che vi è stato insegnato alle scuole superiori sul modo di studiare le funzioni. Fare il grafico deve diventare il passo preliminare a qualsiasi altra manipolazione.\n",
+    "La possibilit&agrave; di fare il grafico di una qualsiasi funzione con pochissima fatica richiede di cambiare completamente l'approccio che vi &egrave; stato insegnato alle scuole superiori sul modo di studiare le funzioni. Fare il grafico deve diventare il passo preliminare a qualsiasi altra manipolazione.\n",
     "</div>"
    ]
   },
@@ -932,68 +932,191 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sommario 8: Grafici in Matplotlib\n",
+    "# Sommario 8: Grafici con Matplotlib - Guida Essenziale\n",
     "\n",
-    "## Nozioni Fondamentali \n",
-    "   - Creazione di un oggetto grafico utilizzando la funzione `subplots`.\n",
-    "   - Gli oggetti `Figure` e `AxesSubplot`.\n",
-    "   - Configurazione dei parametri come il numero di righe (`nrows`) e colonne (`ncols`) per la disposizione dei subplot.\n",
+    "## I Concetti Fondamentali\n",
     "\n",
-    "## Grafico di una Lista di Numeri \n",
-    "   - Uso dei metodi `plot` e `scatter` per disegnare curve e punti.\n",
-    "   - Esempi di creazione di grafici semplici con Matplotlib.\n",
+    "### La Struttura Base: Figure e Axes\n",
+    "```python\n",
+    "fig, ax = plt.subplots()  # Una figura, un grafico\n",
+    "```\n",
+    "- **Figure**: La tela/pagina intera\n",
+    "- **Axes**: Il singolo grafico (assi + area di plot)\n",
+    "- **Regola**: Un `fig` può contenere multipli `ax`\n",
     "\n",
-    "## Titoli, Nomi degli Assi, Colori e Stile delle Linee\n",
-    "   - Personalizzazione dei grafici con titoli e etichette per gli assi (`set_title`, `set_xlabel`, `set_ylabel`).\n",
-    "   - Uso di marker, colori (`color`) e stili di linea (`linestyle`) per differenziare le serie di dati.\n",
+    "### I Due Metodi Principali\n",
     "\n",
-    "## Estremi degli Assi \n",
-    "   - Impostazione manuale dei limiti degli assi con `set_xlim` e `set_ylim`.\n",
+    "| `plot()` | `scatter()` |\n",
+    "|----------|-------------|\n",
+    "| Linee che connettono punti | Punti isolati |\n",
+    "| Per funzioni continue | Per dati sperimentali |\n",
+    "| Default: linea senza marker | Default: marker senza linea |\n",
     "\n",
-    "## Griglie e Linee di Riferimento** \n",
-    "   - Aggiunta di griglie ai grafici con `grid()` per facilitare la lettura.\n",
-    "   - Inserimento di linee orizzontali e verticali usando `hlines` e `vlines`.\n",
+    "## Il Workflow Standard per un Grafico\n",
     "\n",
-    "## Grafico di Funzioni Note\n",
-    "   - Uso di `linspace` o `arange` per generare set di valori x.\n",
-    "   - Definizione di funzioni personalizzate e loro rappresentazione grafica.\n",
+    "### 1. Preparazione dei Dati\n",
+    "```python\n",
+    "x = np.linspace(start, stop, n_points)\n",
+    "y = funzione(x)\n",
+    "```\n",
     "\n",
-    "## Plot Multipli \n",
-    "   - Rappresentazione di più curve all'interno dello stesso plot.\n",
-    "   - Creazione di grafici multipli in una singola figura con l'uso di più oggetti `ax`.\n",
+    "### 2. Creazione della Figura\n",
+    "```python\n",
+    "fig, ax = plt.subplots(figsize=(largh, alt))\n",
+    "```\n",
     "\n",
-    "## Salvare una Figura\n",
-    "   - Salvataggio dei grafici in diversi formati di file (`.pdf`, `.jpg`) utilizzando il metodo `savefig`.\n",
+    "### 3. Plot dei Dati\n",
+    "```python\n",
+    "ax.plot(x, y, color='b', linestyle='-', label='nome')\n",
+    "```\n",
     "\n",
-    "## Plot Logaritmici \n",
-    "   - Introduzione ai grafici con scala logaritmica per rappresentare meglio dati che variano esponenzialmente.\n",
+    "### 4. Personalizzazione\n",
+    "```python\n",
+    "ax.set_xlabel('Tempo (s)')\n",
+    "ax.set_ylabel('Posizione (m)')\n",
+    "ax.set_title('Moto Armonico')\n",
+    "ax.grid(True)\n",
+    "ax.legend()\n",
+    "```\n",
+    "\n",
+    "### 5. Salvataggio (opzionale)\n",
+    "```python\n",
+    "fig.savefig('nome.pdf')\n",
+    "```\n",
+    "\n",
+    "## Personalizzazione: I Parametri Chiave\n",
+    "\n",
+    "### Colori e Stili\n",
+    "- **Colori**: `'r'` (rosso), `'b'` (blu), `'g'` (verde), `'k'` (nero)\n",
+    "- **Linee**: `'-'` (solida), `'--'` (tratteggiata), `':'` (puntini), `'-.'` (tratto-punto)\n",
+    "- **Marker**: `'o'` (cerchi), `'s'` (quadrati), `'^'` (triangoli), `'.'` (punti)\n",
+    "\n",
+    "### Controllo degli Assi\n",
+    "```python\n",
+    "ax.set_xlim(xmin, xmax)  # Limiti manuali\n",
+    "ax.set_ylim(ymin, ymax)\n",
+    "ax.grid(True)             # Griglia\n",
+    "ax.set_aspect('equal')    # Rapporto aspetto\n",
+    "```\n",
+    "\n",
+    "## Plot Multipli: Le Tre Situazioni\n",
+    "\n",
+    "### 1. Pi&ugrave; Curve nello Stesso Plot\n",
+    "```python\n",
+    "ax.plot(x, y1, label='curva 1')\n",
+    "ax.plot(x, y2, label='curva 2')\n",
+    "ax.legend()\n",
+    "```\n",
+    "\n",
+    "### 2. Subplot Affiancati\n",
+    "```python\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2)\n",
+    "ax1.plot(x, y1)\n",
+    "ax2.plot(x, y2)\n",
+    "```\n",
+    "\n",
+    "### 3. Subplot in Griglia\n",
+    "```python\n",
+    "fig, axes = plt.subplots(2, 2)\n",
+    "axes[0,0].plot(...)  # Alto sinistra\n",
+    "axes[0,1].plot(...)  # Alto destra\n",
+    "```\n",
+    "\n",
+    "## Scale Logaritmiche: Quando e Come\n",
+    "\n",
+    "### Quando Usarle\n",
+    "- Dati che variano su ordini di grandezza\n",
+    "- Decadimenti esponenziali\n",
+    "- Leggi di potenza\n",
+    "\n",
+    "### Come Applicarle\n",
+    "```python\n",
+    "ax.set_xscale('log')  # Solo x logaritmico\n",
+    "ax.set_yscale('log')  # Solo y logaritmico\n",
+    "# Entrambi logaritmici = log-log plot\n",
+    "```\n",
+    "\n",
+    "## Grafici Specializzati\n",
+    "\n",
+    "### Istogrammi\n",
+    "```python\n",
+    "n, bins, patches = ax.hist(dati, bins=n_bins, range=(min, max))\n",
+    "```\n",
+    "**Uso**: Distribuzione di dati sperimentali\n",
+    "\n",
+    "### Plot Parametrici\n",
+    "```python\n",
+    "t = np.linspace(0, 2*np.pi, 100)\n",
+    "x = r * np.cos(t)\n",
+    "y = r * np.sin(t)\n",
+    "ax.plot(x, y)\n",
+    "```\n",
+    "**Uso**: Traiettorie, orbite, curve complesse\n",
+    "\n",
+    "## Pattern Utili per la Fisica\n",
     "\n",
     "\n",
-    "## Altri elementi dei plot\n",
+    "### Confronto Teoria-Esperimento\n",
+    "```python\n",
+    "ax.scatter(x_exp, y_exp, label='Sperimentale')\n",
+    "ax.plot(x_teo, y_teo, 'r-', label='Teorico')\n",
+    "ax.legend()\n",
+    "```\n",
     "\n",
-    "### Legende\n",
+    "### Oscillazioni Smorzate\n",
+    "```python\n",
+    "t = np.linspace(0, 10, 1000)\n",
+    "y = A * np.exp(-gamma*t) * np.cos(omega*t)\n",
+    "ax.plot(t, y)\n",
+    "ax.plot(t, A*np.exp(-gamma*t), 'r--')  # Inviluppo\n",
+    "```\n",
     "\n",
-    "- Le legende vengono disegnate invocando il metodo `legend()`\n",
-    "- La legenda di ciascuna curva in un plot viene definita utilizzando il parametro `label` nella chiamata a `plot`.\n",
-    "- Curve senza etichetta `label` non appaiono nella legenda. Se nessuna curva ha un `label`, si verifica un errore.\n",
+    "## Errori Comuni e Soluzioni\n",
     "\n",
+    "| Problema | Sintomo | Soluzione |\n",
+    "|----------|---------|-----------|\n",
+    "| Output `[<matplotlib...>]` | Manca `;` alla fine | Aggiungi `;` dopo plot |\n",
+    "| Grafico vuoto | Dati fuori scala | Controlla `xlim`, `ylim` |\n",
+    "| Legenda error | Nessun `label` | Aggiungi `label='nome'` |\n",
+    "| Testo LaTeX non funziona | `\\` interpretato male | Usa `r'stringa'` |\n",
+    "| Plot sovrapposti | `subplots` errato | Verifica `nrows`, `ncols` |\n",
     "\n",
-    "### Testo\n",
-    "- Si usa `plt.text`\n",
-    "- L'uso del prefisso `r` prima delle stringhe impedisce l'interpretazione dei caratteri di escape, utile per i comandi LaTeX.\n",
+    "## Best Practices\n",
     "\n",
-    "### Subplots\n",
+    "### 1. Sempre Etichettare gli Assi\n",
+    "```python\n",
+    "ax.set_xlabel('Grandezza (unità)')\n",
+    "```\n",
     "\n",
-    "- Creazione di un subplot all'interno di un grafico principale usando `plt.axes()` per posizionare un secondo plot.\n",
+    "### 2. Griglia per Leggibilit&agrave;\n",
+    "```python\n",
+    "ax.grid(True, alpha=0.3)\n",
+    "```\n",
     "\n",
-    "## Plot parametrici\n",
+    "### 3. Legende per Plot Multipli\n",
+    "```python\n",
+    "ax.plot(..., label='descrizione')\n",
+    "ax.legend(loc='best')\n",
+    "```\n",
     "\n",
-    "- Definizione di curve usando parametri invece delle coordinate tradizionali `x` e `y`.\n",
+    "### 4. Figure di Dimensioni Appropriate\n",
+    "- Schermo: `figsize=(10, 6)`\n",
+    "- Paper: `figsize=(8, 6)`\n",
+    "- Presentazione: `figsize=(12, 8)`\n",
     "\n",
-    "## Suggerimento finale\n",
+    "## Checklist Pre-Consegna\n",
     "\n",
-    "- È consigliato fare un grafico preliminare di una funzione prima di procedere con ulteriori manipolazioni per avere una comprensione visiva iniziale del suo comportamento. \n",
-    "\n"
+    "- [ ] Assi etichettati con unit&agrave; di misura?\n",
+    "- [ ] Titolo descrittivo?\n",
+    "- [ ] Legenda se ci sono pi&ugrave; curve?\n",
+    "- [ ] Font leggibili (non troppo piccoli)?\n",
+    "- [ ] Colori distinguibili?\n",
+    "- [ ] Scala appropriata (lineare vs log)?\n",
+    "- [ ] Griglia se aiuta la lettura?\n",
+    "\n",
+    "## Il Consiglio Più Importante\n",
+    "\n",
+    "**PRIMA grafica, POI analizza**: Fare sempre un plot esplorativo prima di qualsiasi manipolazione matematica. Un grafico vale pi&ugrave; di mille calcoli per capire il comportamento di una funzione o di un dataset.\n"
    ]
   }
  ],
@@ -1014,7 +1137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   },
   "toc": {
    "base_numbering": 1,
