--- a/ipynb/09_numpy_statistics.ipynb
+++ b/ipynb/09_numpy_statistics.ipynb
@@ -18,8 +18,8 @@
     "\n",
     "        \n",
     "## Nozioni fondamentali\n",
-    "La statistica ha un ruolo fondamentale in Fisica e in ogni campo scientifico a base sperimentale. Numpy fornisce tutti i metodi necessari per la manipolazione statistica dei dati. Affrontiamo questo argomento dopo aver introdotto Matplotlib perchè\n",
-    "la rappresentazione grafica dei dati è uno strumento estremamente utile.\n",
+    "La statistica ha un ruolo fondamentale in Fisica e in ogni campo scientifico a base sperimentale. Numpy fornisce tutti i metodi necessari per la manipolazione statistica dei dati. Affrontiamo questo argomento dopo aver introdotto Matplotlib perch&eacute;\n",
+    "la rappresentazione grafica dei dati &egrave; uno strumento estremamente utile.\n",
     "\n",
     "<div style= 'padding:20px 20px 0px 150px;'>\n",
     "    <img src=\"../Humour/extrapolating1.png\" width=\"500\" align=\"center\"/>\n",
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il valor medio o media di un insieme di dati $x = [x_1,\\cdots,x_n]$ è\n",
+    "Il valor medio o media di un insieme di dati $x = [x_1,\\cdots,x_n]$ &egrave;\n",
     "$$ <x> = \\frac{\\sum_{i=1}^n x_i}{n} $$\n",
     "Numpy fornisce il metodo `mean` per calcolarla:"
    ]
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La varianza di un insieme di dati $x = [x_1,\\cdots,x_n]$ è\n",
+    "La varianza di un insieme di dati $x = [x_1,\\cdots,x_n]$ &egrave;\n",
     "$$ \\sigma^2  = \\,\\, <(x - <x>)^2> \\,\\, = \\frac{\\sum_{i=1}^n (x_i-<x>)^2}{n} = \\,\\,<x^2> -<x>^2$$\n",
     "Numpy fornisce il metodo `var` per calcolarla:"
    ]
@@ -146,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Talvolta è utile estrarre i dati pi&ugrave; vicini di un numero dato di deviazioni standard al valor medio, oppure quelli che distano pipi&ugrave;\n",
+    "Talvolta &egrave; utile estrarre i dati pi&ugrave; vicini di un numero dato di deviazioni standard al valor medio, oppure quelli che distano pi&ugrave;\n",
     "di un numero dato di deviazioni standard dal valor medio. Nell'esempio selezioniamo i dati all'interno di una deviazione standard:"
    ]
   },
@@ -228,7 +228,7 @@
    "source": [
     "## Istogramma delle frequenze\n",
     "\n",
-    "L'istogramma delle frequenze è sovente il modo migliore per un primo esame dei dati"
+    "L'istogramma delle frequenze &egrave; sovente il modo migliore per un primo esame dei dati"
    ]
   },
   {
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La conoscenza del minimo e del massimo valore dei dati è utile per determinare il `range` dei bin, cio&egrave; la coordinata dell'estremo inferiore del primo bin e la coordinata dell'estremo supereriore dell'ultimo bin. Il numero di bin deve essere adattato di volta in volta al set di dati per aiutare l'analisi."
+    "La conoscenza del minimo e del massimo valore dei dati &egrave; utile per determinare il `range` dei bin, cio&egrave; la coordinata dell'estremo inferiore del primo bin e la coordinata dell'estremo supereriore dell'ultimo bin. Il numero di bin deve essere adattato di volta in volta al set di dati per aiutare l'analisi."
    ]
   },
   {
@@ -272,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nell'esempio seguente vengono inserite tre linee verticali per segnalare il valor medio e i valori della variabile a più e meno una deviazione standard dal valor medio. "
+    "Nell'esempio seguente vengono inserite tre linee verticali per segnalare il valor medio e i valori della variabile a pi&ugrave; e meno una deviazione standard dal valor medio (Non &egrave; necessario farlo sempre). "
    ]
   },
   {
@@ -375,8 +375,8 @@
     "\n",
     "La generazione di numeri casuali secondo una distribuzione data ha numerose importanti applicazioni.\n",
     "Il notebook [11_MetodoMontecarlo](./11_MetodoMontecarlo.ipynb) fornisce una discussione pi&ugrave; approfondita e diversi esempi.<BR>\n",
-    "Nelle versioni più recenti di Numpy (>1.17) è stata introdotto un oggetto `default_rng` i cui metodi possono essere utilizzati \n",
-    "per generare set di valori distribuiti secondo le singole distribuzioni di probabilità. "
+    "Nelle versioni pi&ugrave; recenti di Numpy (>1.17) &egrave; stata introdotto un oggetto `default_rng` i cui metodi possono essere utilizzati \n",
+    "per generare set di valori distribuiti secondo le singole distribuzioni di probabilit&agrave;. "
    ]
   },
   {
@@ -656,7 +656,7 @@
     "    Di ciascun campione\n",
     "<OL>\n",
     "<LI>Fate l'istogramma delle frequenze.\n",
-    "<LI>Sovrapponete all'istogramma delle frequenze la funzione densità di probabilità gaussiana di valor medio $\\mu$ e deviazione standard $\\sigma$, facendo attenzione che la curva e l'istogramma siano confrontabili. Cosa &egrave; necessario fare?\n",
+    "<LI>Sovrapponete all'istogramma delle frequenze la funzione densit&agrave; di probabilità gaussiana di valor medio $\\mu$ e deviazione standard $\\sigma$, facendo attenzione che la curva e l'istogramma siano confrontabili. Cosa &egrave; necessario fare?\n",
     "</OL>\n",
     "</div>"
    ]
@@ -665,7 +665,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Distribuzioni di probabilità\n",
+    "## Distribuzioni di probabilit&agrave;\n",
     "\n",
     "Il modulo `scipy.stats` contiene le principali distribuzioni di probabilit&agrave;, sia discrete che continue, funzioni che permettono di calcolare i parametri statistici pi&ugrave; comuni di un set di dati, funzioni che eseguono test statistici e test di correlazione fra uno o pi&ugrave; set di dati.<BR>\n",
     "Per ulteriori informazioni https://docs.scipy.org/doc/scipy/reference/stats.html."
@@ -820,26 +820,181 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sommario 9: Statistica Elementare con Numpy e Matplotlib\n",
+    "# Sommario 9: Statistica per la Fisica Sperimentale\n",
     "\n",
-    "## Operazioni di Base sui Dati \n",
-    "   - Creazione di array di dati con Numpy.\n",
-    "   - Calcolo della media, varianza e deviazione standard tramite le funzioni `mean`, `var` e `std` di Numpy.\n",
+    "## 🎯 Il Messaggio Centrale\n",
     "\n",
-    "## Istogrammi delle Frequenze  \n",
-    "   - Creazione di un istogramma delle frequenze per visualizzare la distribuzione dei dati con `hist`.\n",
-    "   - Aggiunta di linee che rappresentano la media e le deviazioni standard.\n",
+    "**La statistica non &egrave; matematica astratta, &egrave; lo strumento per estrarre informazione dal rumore nelle misure sperimentali**\n",
     "\n",
-    "## Generazione di numeri casuali   \n",
-    "   - Numpy permette di generare numeri casuali in accordo con tutte le pi&ugrave; comuni distribuzioni di probabilit&agrave; usando i metodi di numpy.random.default_rng.\n",
-    "   - scipy.stats contiene le principali distribuzioni di probabilit&agrave;\n",
-    "   - Riferimento al \"paradosso di Anscombe\" per evidenziare i pericoli di affidarsi esclusivamente ai parametri statistici senza analizzare i dati visivamente.\n",
+    "Tre pilastri fondamentali:\n",
+    "1. **Caratterizzare** i dati (media, deviazione standard)\n",
+    "2. **Visualizzare** le distribuzioni (istogrammi)\n",
+    "3. **Modellare** con distribuzioni teoriche (Gauss, Poisson)\n",
     "\n",
+    "## 📊 Parametri Statistici: Cosa Misurano Davvero\n",
     "\n",
-    "### Conclusione:\n",
-    "L'analisi grafica e statistica sono strumenti complementari fondamentali per una corretta interpretazione dei dati in fisica sperimentale.\n",
-    "\n"
+    "### I Magnifici Tre\n",
+    "```python\n",
+    "media = dati.mean()     # Valore centrale\n",
+    "std = dati.std()        # Dispersione\n",
+    "var = dati.var()        # std²\n",
+    "```\n",
+    "\n",
+    "### Quando Usarli e Quando NO\n",
+    "\n",
+    "| Parametro | Utile quando | Ingannevole quando |\n",
+    "|-----------|--------------|-------------------|\n",
+    "| Media | Distribuzione simmetrica | Outliers presenti |\n",
+    "| Std | Distribuzione unimodale | Distribuzioni bimodali |\n",
+    "| Min/Max | Sempre | Mai sufficienti da soli |\n",
+    "\n",
+    "**Regola d'oro**: I parametri numerici senza visualizzazione sono pericolosi (vedi Anscombe)\n",
+    "\n",
+    "## 📈 Istogrammi: La Finestra sui Dati\n",
+    "\n",
+    "### Il Pattern Standard\n",
+    "```python\n",
+    "fig, ax = plt.subplots()\n",
+    "n, bins, patches = ax.hist(dati, bins=nbins, range=(xmin, xmax))\n",
+    "```\n",
+    "\n",
+    "### Scelta Critica dei Bin\n",
+    "- **Troppo pochi** (< 10): Perdi struttura\n",
+    "- **Troppi** (> √n): Rumore domina\n",
+    "- **Regola empirica**: bins ≈ √(numero_dati)\n",
+    "\n",
+    "### Normalizzazione per Confronto\n",
+    "```python\n",
+    "# Per confrontare con teoria\n",
+    "ax.hist(dati, density=True)  # Area = 1\n",
+    "```\n",
+    "\n",
+    "## 🎲 Generazione Numeri Casuali\n",
+    "\n",
+    "### Il Nuovo Standard (NumPy > 1.17)\n",
+    "```python\n",
+    "from numpy.random import default_rng\n",
+    "rng = default_rng(seed)  # seed per riproducibilità\n",
+    "\n",
+    "# Distribuzioni principali\n",
+    "rng.normal(loc=μ, scale=σ, size=n)    # Gaussiana\n",
+    "rng.uniform(low, high, size=n)        # Uniforme\n",
+    "rng.poisson(lam=λ, size=n)            # Poisson\n",
+    "rng.integers(low, high, size=n)       # Interi uniformi\n",
+    "```\n",
+    "\n",
+    "### Perch&egrave; Generare Dati Casuali?\n",
+    "1. **Test algoritmi**: Prima di dati reali\n",
+    "2. **Monte Carlo**: Simulazioni complesse\n",
+    "3. **Bootstrap**: Stima incertezze\n",
+    "4. **Validazione**: Confronto teoria-esperimento\n",
+    "\n",
+    "## 📉 Distribuzioni Fondamentali per la Fisica\n",
+    "\n",
+    "### Gaussiana (Normale)\n",
+    "**Quando**: Errori di misura, teorema limite centrale\n",
+    "```python\n",
+    "# Media μ, deviazione σ\n",
+    "P(x) = exp(-(x-μ)²/2σ²) / √(2πσ²)\n",
+    "```\n",
+    "**Proprietà chiave**: 68% dati in ±σ, 95% in ±2σ\n",
+    "\n",
+    "### Poisson\n",
+    "**Quando**: Eventi rari, decadimenti radioattivi\n",
+    "```python\n",
+    "# Parametro λ (rate)\n",
+    "P(k) = λᵏ exp(-λ) / k!\n",
+    "```\n",
+    "**Proprietà chiave**: Media = Varianza = λ\n",
+    "\n",
+    "### Uniforme\n",
+    "**Quando**: Errori di digitalizzazione, fase casuale\n",
+    "```python\n",
+    "P(x) = 1/(b-a) per a ≤ x ≤ b\n",
+    "```\n",
+    "\n",
+    "## ⚠️ I Pericoli della Statistica Ingenua\n",
+    "\n",
+    "### 1. Il Paradosso di Anscombe\n",
+    "Quattro dataset con:\n",
+    "- Stessa media ✓\n",
+    "- Stessa deviazione standard ✓\n",
+    "- Stessa retta di fit ✓\n",
+    "- **Completamente diversi visivamente!**\n",
+    "\n",
+    "### 2. Outliers Nascosti\n",
+    "```python\n",
+    "# Un outlier può spostare la media\n",
+    "dati = [1, 2, 3, 4, 100]  # media = 22!\n",
+    "# Usa la mediana per robustezza\n",
+    "```\n",
+    "\n",
+    "### 3. Distribuzioni Bimodali\n",
+    "Due picchi nascosti da media e std singole\n",
+    "\n",
+    "## 🔬 Pattern per Analisi Dati Sperimentali\n",
+    "\n",
+    "### Workflow Standard\n",
+    "```python\n",
+    "# 1. Carica dati\n",
+    "dati = np.loadtxt('misure.txt')\n",
+    "\n",
+    "# 2. Esplora visivamente\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2)\n",
+    "ax1.hist(dati, bins=30)\n",
+    "ax2.boxplot(dati)\n",
+    "\n",
+    "# 3. Calcola parametri\n",
+    "μ, σ = dati.mean(), dati.std()\n",
+    "\n",
+    "# 4. Identifica outliers\n",
+    "outliers = dati[np.abs(dati - μ) > 3*σ]\n",
+    "\n",
+    "# 5. Confronta con teoria\n",
+    "x = np.linspace(dati.min(), dati.max(), 100)\n",
+    "teoria = stats.norm.pdf(x, μ, σ)\n",
+    "ax1.plot(x, teoria * n * bin_width)\n",
+    "```\n",
+    "\n",
+    "### Test di Normalit&agrave;\n",
+    "```python\n",
+    "# Shapiro-Wilk test\n",
+    "statistic, p_value = stats.shapiro(dati)\n",
+    "if p_value < 0.05:\n",
+    "    print(\"Non gaussiano!\")\n",
+    "```\n",
+    "\n",
+    "## 💡 Best Practices\n",
+    "\n",
+    "1. **Sempre visualizzare prima**: Grafico → Parametri → Conclusioni\n",
+    "2. **Controllare outliers**: 3σ rule o metodo IQR\n",
+    "3. **Seed per riproducibilit&agrave;**: `rng = default_rng(12345)`\n",
+    "4. **Bin appropriati**: Non troppi, non troppo pochi\n",
+    "5. **Confrontare con teoria**: Sovrapporre curve teoriche\n",
+    "\n",
+    "## 📊 Checklist Analisi Statistica\n",
+    "\n",
+    "- [ ] Ho fatto l'istogramma dei dati?\n",
+    "- [ ] Ho controllato presenza di outliers?\n",
+    "- [ ] La distribuzione &egrave; unimodale?\n",
+    "- [ ] Media e mediana sono simili?\n",
+    "- [ ] Ho scelto bins appropriati?\n",
+    "- [ ] Ho confrontato con distribuzione teorica?\n",
+    "- [ ] Ho verificato le assunzioni statistiche?\n",
+    "\n",
+    "## 🎓 Il Concetto Chiave\n",
+    "\n",
+    "**\"Tutti i modelli sono sbagliati, ma alcuni sono utili\"** - George Box\n",
+    "\n",
+    "La statistica non d&agrave; verit&agrave; assolute ma strumenti per quantificare l'incertezza. In fisica sperimentale, l'onest&agrave; nell'analisi statistica &egrave; fondamentale: mostrare sempre i dati grezzi, dichiarare le assunzioni, quantificare le incertezze.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -859,7 +1014,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   },
   "toc": {
    "base_numbering": 1,
