--- a/ipynb/10_scipy.ipynb
+++ b/ipynb/10_scipy.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,22 +538,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.737381134298694"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = np.linspace(0.5, 2., 237)\n",
     "y = my_f(x)\n",
@@ -1026,7 +1015,7 @@
     "    \n",
     "Scrivete un programma chiamato `sqrttwo.py` per cercare la radice *x* della funzione $f(x)=2 − x^2$ usando il metodo di bisezione. Scegliete come tolleranza per l'approssimazione alla radice 10<sup>−8</sup>.\n",
     "<OL>\n",
-    "<LI>Giustificate la scelta dell'intervallo iniziale $[a, b]$ per la ricerca: che valori evte scelto per *a* e *b*? Perch&egrave;?\n",
+    "<LI>Giustificate la scelta dell'intervallo iniziale $[a, b]$ per la ricerca: che valori evte scelto per *a* e *b*? Perch&eacute;?\n",
     "<LI>Esaminate i risultati:\n",
     "    <OL>\n",
     "        <LI>Che valore restituisce l'algoritmo di bisezione per la radice *x*?\n",
@@ -1252,7 +1241,8 @@
     "#create fake data\n",
     "x = np.linspace(0, 4, 50)\n",
     "y = f(x, a=2.5, b=1.3, c=0.5)\n",
-    "#add noise\n",
+    "#add noise. Typically, noise is already present in the data\n",
+    "#and there is no need to add it. \n",
     "yi = y + 0.2 * np.random.normal(size=len(x))\n",
     "\n",
     "#call curve fit function\n",
@@ -1277,7 +1267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si noti che nell'esempio precedente abbiamo definito la funzione da utilizzare per il fit $y = f(x)$ usando del codice Python. Quindi possiamo utilizzare una funzione (quasi) arbitraria nel metodo `curve_fit`.\n",
+    "Si noti che nell'esempio precedente abbiamo definito la funzione da utilizzare per il fit $y = f(x,\\vec{p})$ usando del codice Python. Quindi possiamo utilizzare una funzione (quasi) arbitraria nel metodo `curve_fit`.\n",
     "\n",
     "La funzione `curve_fit` restituisce una tuple `popt, pcov`. Il primo elemento, `popt`, contiene l'ntupla dei parametri ottimali (OPTimal Parameters), cio&egrave; i parametri che minimizzano la somma degli scarti quadratici. Il secondo elemento, `pcov`, contiene la matrice di covarianza di tutti i parametri (Sperimentazioni di Fisica). La diagonale fornisce la varianza della stima dei parametri. La standard deviation sulla stima dei parametri pu&ograve; quindi essere calcolata come\n",
     "```\n",
@@ -1367,48 +1357,114 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Sommario 10: Metodi Numerici con SciPy - Concetti Essenziali\n",
     "\n",
-    "# Sommario 10: Metodi Numerici in Python (SciPy)\n",
+    "## 🎯 Il Problema Centrale\n",
+    "**Quando le soluzioni analitiche non esistono o sono troppo complesse**, usiamo metodi numerici per:\n",
+    "- Calcolare integrali \"impossibili\"\n",
+    "- Risolvere equazioni differenziali non lineari\n",
+    "- Trovare zeri di funzioni complicate\n",
+    "- Interpolare ed estrapolare da dati sperimentali\n",
     "\n",
+    "## 📐 I Cinque Pilastri del Calcolo Numerico\n",
     "\n",
-    "La libreria **SciPy**, basata su **NumPy**, fornisce numerosi algoritmi per l'elaborazione scientifica. \n",
+    "### 1. **Integrazione Numerica** (`scipy.integrate`)\n",
+    "**Concetto chiave**: Approssimare l'area sotto una curva suddividendola in piccoli pezzi\n",
     "\n",
-    "## Integrazione numerica\n",
-    "`scipy.integrate.quad()` &egrave; la routine base per calcolare integrali definiti in una variabile su intervalli finiti o infiniti.\n",
+    "- **`quad(f, a, b)`**: Metodo generale per integrali definiti\n",
+    "  - Restituisce: (risultato, errore stimato)\n",
+    "  - Gestisce anche limiti infiniti: `quad(f, 0, np.inf)`\n",
+    "- **`trapezoid`, `simpson`**: Per dati discreti (array di punti)\n",
+    "- **Parametri extra**: Passati con `args=(param1, param2)`\n",
     "\n",
+    "⚠️ **Attenzione**: Sempre plottare la funzione prima di integrarla per identificare singolarit&agrave;!\n",
     "\n",
-    "## Integrazione con parametri\n",
-    "Le funzioni che dipendono da parametri possono essere integrate passando i parametri come argomenti extra a `quad()` con la keyword `args`. \n",
+    "### 2. **Equazioni Differenziali** (`odeint`)\n",
+    "**Concetto chiave**: Trasformare equazioni di ordine `n` in `n` equazioni del primo ordine\n",
     "\n",
+    "- **Input essenziali**:\n",
+    "  1. Funzione `f(y, t)` che definisce `dy/dt`\n",
+    "  2. Condizione iniziale `y0`\n",
+    "  3. Array di tempi `t` dove calcolare la soluzione\n",
+    "- **Output**: Array con i valori di y(t)\n",
     "\n",
-    "## Metodi dei trapezi e di Simpson\n",
-    "Sono disponibili routines che implementano specifici metodi di integrazione come  il metodo dei trapezi (`trapezoid()`) e il metodo di Simpson (`simpson()`).\n",
+    "**Pattern fisico tipico**: Oscillatore armonico, decadimento radioattivo, circuiti RC\n",
     "\n",
+    "### 3. **Ricerca di Zeri** (`scipy.optimize`)\n",
+    "**Concetto chiave**: Trovare x tale che f(x) = 0\n",
     "\n",
-    "## Risoluzione di Equazioni Differenziali Ordinarie (ODE)\n",
-    "Le equazioni differenziali ordinarie (ODE) di ordine `n` possono essere riscritte come un sistema di equazioni differenziali di primo ordine. La libreria `scipy` fornisce una funzione chiamata `odeint` per risolvere queste equazioni.\n",
+    "- **`bisect(f, a, b)`**: Robusto ma lento\n",
+    "  - Richiede f(a) e f(b) di segno opposto\n",
+    "  - Garantisce convergenza se f &egrave; continua\n",
+    "- **`fsolve(f, x0)`**: Veloce ma richiede buon punto iniziale\n",
+    "  - Pu&ograve; non convergere\n",
+    "  - Restituisce array numpy\n",
     "\n",
+    "🔍 **Strategia**: Plot → identificare intervalli → scegliere metodo\n",
     "\n",
-    "## Ricerca delle radici\n",
-    "Sono disponibili diversi metodi per la ricerca delle radici di una funzione nel modulo `scipy.optimize`.\n",
+    "### 4. **Ottimizzazione** (Massimi e Minimi)\n",
+    "**Concetto chiave**: I minimi sono locali, dipendono dal punto di partenza\n",
     "\n",
-    "#### Metodo di Bisezione\n",
-    "L'algoritmo `bisect` &egrave; robusto e semplice, anche se non molto veloce.  Il metodo richiede che la funzione abbia segni opposti ai due estremi dell'intervallo in cui la radice viene cercata.\n",
+    "- **`fmin(f, x0)`**: Trova minimo locale partendo da x0\n",
+    "- **Per massimi**: Minimizzare `-f(x)`\n",
+    "- **Output**: Array con coordinate del minimo\n",
     "\n",
-    "#### Metodo `fsolve`\n",
-    "Un metodo alternativo, spesso pi&ugrave; efficiente, &egrave; `fsolve`. Richiede solo un punto di partenza vicino alla radice attesa e funziona anche con problemi multi-dimensionali.\n",
+    "⚡ **Ricorda**: Diversi punti iniziali → diversi minimi!\n",
     "\n",
-    "## Ottimizzazione: trovare massimi e minimi\n",
-    "La routine `scipy.optimize.fmin` permette di minimizzare una funzione `f(x)`. Per massimizzare una funzione, è sufficiente minimizzare `-f(x)`. \n",
+    "### 5. **Fit di Dati** (`curve_fit`)\n",
+    "**Concetto chiave**: Minimizzare la somma degli scarti quadratici\n",
     "\n",
-    "## Fit di un set di dati\n",
-    "SciPy fornisce la funzione `curve_fit` per effettuare il fit di un set di dati basato su un modello ipotizzato. Questo approccio minimizza la somma degli scarti quadratici tra i dati e la curva. \n"
+    "- **Input necessari**:\n",
+    "  1. Funzione modello `f(x, param1, param2, ...)`\n",
+    "  2. Dati `x, y`\n",
+    "  3. (Opzionale) Stima iniziale parametri `p0`\n",
+    "- **Output**: \n",
+    "  - `popt`: parametri ottimali\n",
+    "  - `pcov`: matrice di covarianza (errori su parametri)\n",
+    "\n",
+    "## 💡 Workflow Universale per Problemi Numerici\n",
+    "\n",
+    "1. **VISUALIZZA** sempre prima di calcolare\n",
+    "2. **IDENTIFICA** singolarit&agrave;, intervalli, punti iniziali dal grafico\n",
+    "3. **SCEGLI** il metodo appropriato\n",
+    "4. **VERIFICA** il risultato con un plot\n",
+    "5. **CONTROLLA** l'errore stimato\n",
+    "\n",
+    "## ⚠️ Trappole Comuni da Evitare\n",
+    "\n",
+    "1. **Mai fidarsi ciecamente**: Un algoritmo pu&ograve; convergere a risultati sbagliati\n",
+    "2. **Singolarità nascoste**: `f(x) = sin(1/x)` vicino a `x=0` &egrave; un incubo numerico\n",
+    "3. **Condizioni iniziali sbagliate**: In ottimizzazione e ODE determinano tutto\n",
+    "4. **Dimenticare l'errore**: `quad` restituisce (risultato, **errore**)\n",
+    "5. **Scale inappropriate**: Lavorare con numeri molto grandi o piccoli richiede attenzione\n",
+    "\n",
+    "## 🔬 Applicazioni Fisiche Immediate\n",
+    "\n",
+    "- **Meccanica**: Traiettorie con resistenza dell'aria (ODE non lineari)\n",
+    "- **Ottica**: Minimi per principio di Fermat\n",
+    "- **Laboratorio**: Fit di dati sperimentali con modelli teorici\n",
+    "- **Quantistica**: Ricerca autovalori (zeri del determinante)\n",
+    "\n",
+    "## 📊 Scegliere il Metodo Giusto\n",
+    "\n",
+    "| Problema | Metodo Robusto | Metodo Veloce | Quando Usarlo |\n",
+    "|----------|---------------|---------------|---------------|\n",
+    "| Integrale | `quad` | `simpson` | quad per funzioni, simpson per dati |\n",
+    "| Zero | `bisect` | `fsolve` | bisect se conosci intervallo, fsolve se hai buona stima |\n",
+    "| Minimo | - | `fmin` | Sempre con multiple partenze |\n",
+    "| ODE | `odeint` | Eulero (custom) | odeint sempre, Eulero solo per didattica |\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": []
   }
@@ -1430,7 +1486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   },
   "toc": {
    "base_numbering": 1,
