--- a/ipynb/14_Decoratori.ipynb
+++ b/ipynb/14_Decoratori.ipynb
@@ -978,6 +978,280 @@
    "source": [
     "Parlare di @dataclass"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il notebook sui decoratori è ben strutturato ma potrebbe beneficiare di alcuni miglioramenti per renderlo più accessibile a studenti principianti. Ecco i miei suggerimenti:\n",
+    "\n",
+    "## Suggerimenti di miglioramento\n",
+    "\n",
+    "### 1. **Correzioni necessarie**\n",
+    "- Negli esempi finali c'è un errore con `cone1 = Cone(-1,3)` che accetta un raggio negativo senza sollevare errore. Il controllo dovrebbe essere fatto nel `__init__` di Circle, non solo nel setter.\n",
+    "- Il commento finale \"Parlare di @dataclass\" dovrebbe essere rimosso o sviluppato.\n",
+    "\n",
+    "### 2. **Semplificazione per principianti**\n",
+    "- L'esempio iniziale con `parent()` che restituisce funzioni potrebbe confondere. Suggerirei di iniziare con un esempio più semplice di funzione che accetta una funzione come parametro.\n",
+    "- Prima di `*args, **kwargs`, aggiungere una breve spiegazione o rimandare a una lezione precedente.\n",
+    "\n",
+    "### 3. **Chiarimenti concettuali**\n",
+    "- Aggiungere un diagramma o schema visuale che mostri come il decoratore \"avvolge\" la funzione originale.\n",
+    "- Spiegare meglio la differenza tra `@classmethod` e `@staticmethod` con esempi più chiari:\n",
+    "  ```python\n",
+    "  # @staticmethod: non accede né alla classe né all'istanza\n",
+    "  # @classmethod: accede alla classe ma non all'istanza specifica\n",
+    "  ```\n",
+    "\n",
+    "### 4. **Esempi pratici aggiuntivi**\n",
+    "- Aggiungere un decoratore utile per la fisica, come un timer per misurare il tempo di esecuzione:\n",
+    "  ```python\n",
+    "  import time\n",
+    "  \n",
+    "  def timer(func):\n",
+    "      def wrapper(*args, **kwargs):\n",
+    "          start = time.time()\n",
+    "          result = func(*args, **kwargs)\n",
+    "          end = time.time()\n",
+    "          print(f\"{func.__name__} ha impiegato {end-start:.4f} secondi\")\n",
+    "          return result\n",
+    "      return wrapper\n",
+    "  ```\n",
+    "\n",
+    "### 5. **Esercizi graduali**\n",
+    "Aggiungere esercizi alla fine:\n",
+    "- Creare un decoratore che conta quante volte viene chiamata una funzione\n",
+    "- Creare un decoratore che verifica che gli input siano positivi\n",
+    "- Modificare la classe Circle aggiungendo un decoratore per validare gli input\n",
+    "\n",
+    "### 6. **Note sulla convenzione underscore**\n",
+    "Espandere il commento su `_radius`:\n",
+    "```python\n",
+    "# Convenzioni Python per attributi:\n",
+    "# _nome: attributo \"privato\" (convenzione, non enforced)\n",
+    "# __nome: name mangling (Python modifica il nome internamente)\n",
+    "# nome_: usato quando nome è una keyword riservata\n",
+    "```\n",
+    "\n",
+    "## Sommario dei concetti principali\n",
+    "\n",
+    "### **Concetti Fondamentali dei Decoratori**\n",
+    "\n",
+    "1. **Funzioni come oggetti di prima classe** (Sezione 1.1)\n",
+    "   - Le funzioni possono essere passate come argomenti\n",
+    "   - Le funzioni possono essere restituite da altre funzioni\n",
+    "   - Le funzioni possono essere definite dentro altre funzioni\n",
+    "   - Questo permette la programmazione funzionale in Python\n",
+    "\n",
+    "2. **Decoratori base** (Sezione 1.1.1)\n",
+    "   - Un decoratore è una funzione che modifica il comportamento di un'altra funzione\n",
+    "   - Pattern base: funzione esterna che definisce e restituisce una funzione interna (wrapper)\n",
+    "   - Il wrapper \"avvolge\" la funzione originale aggiungendo funzionalità\n",
+    "\n",
+    "3. **Sintassi @** (Sezione 1.1.2)\n",
+    "   - `@decoratore` prima di una funzione equivale a `funzione = decoratore(funzione)`\n",
+    "   - Sintassi più pulita e leggibile\n",
+    "   - Può essere applicata a funzioni e metodi\n",
+    "\n",
+    "4. **Decoratori con argomenti** (Sezione 1.3)\n",
+    "   - Uso di `*args, **kwargs` per accettare qualsiasi argomento\n",
+    "   - Il wrapper passa gli argomenti alla funzione decorata\n",
+    "   - Permette decoratori generici utilizzabili con qualsiasi funzione\n",
+    "\n",
+    "5. **Gestione dei valori di ritorno** (Sezione 1.4)\n",
+    "   - Il wrapper deve restituire il risultato della funzione decorata\n",
+    "   - `@functools.wraps` preserva i metadati della funzione originale\n",
+    "   - Importante per mantenere documentazione e nome della funzione\n",
+    "\n",
+    "6. **Decoratori built-in per classi** (Sezione 1.5)\n",
+    "   - **@property**: trasforma un metodo in attributo read-only\n",
+    "   - **@nome.setter**: definisce come modificare una property\n",
+    "   - **@classmethod**: metodo che riceve la classe come primo argomento\n",
+    "   - **@staticmethod**: metodo che non riceve né self né cls\n",
+    "\n",
+    "### **Applicazioni pratiche**\n",
+    "- **Validazione**: controllare input prima dell'esecuzione\n",
+    "- **Logging**: registrare chiamate alle funzioni\n",
+    "- **Timing**: misurare performance\n",
+    "- **Caching**: memorizzare risultati di funzioni costose\n",
+    "- **Access control**: limitare accesso a certe funzioni\n",
+    "\n",
+    "### **Best Practices**\n",
+    "- Usare `functools.wraps` per preservare metadati\n",
+    "- Documentare chiaramente cosa fa il decoratore\n",
+    "- Mantenere i decoratori semplici e con singola responsabilità\n",
+    "- Considerare l'ordine quando si applicano decoratori multipli\n",
+    "\n",
+    "I decoratori sono uno strumento potente che permette di separare concerns trasversali (logging, validazione, etc.) dalla logica principale, rendendo il codice più modulare e manutenibile."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "&nbsp;\n",
+    "<br>\n",
+    "&nbsp;\n",
+    "<br>\n",
+    "&nbsp;\n",
+    "## Sommario alternativo\n",
+    "<br>\n",
+    "&nbsp;\n",
+    "<br>\n",
+    "&nbsp;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il notebook sui decoratori è ben strutturato ma necessita di alcuni miglioramenti per renderlo più accessibile a studenti senza esperienza di programmazione.\n",
+    "\n",
+    "## Suggerimenti di miglioramento\n",
+    "\n",
+    "### 1. **Correzioni critiche**\n",
+    "- **Bug nel controllo del raggio**: Nell'esempio `cone1 = Cone(-1,3)` il raggio negativo viene accettato. La validazione dovrebbe essere nell'`__init__`:\n",
+    "```python\n",
+    "def __init__(self, radius):\n",
+    "    if radius < 0:\n",
+    "        raise ValueError(\"Radius must be positive\")\n",
+    "    self._radius = radius\n",
+    "```\n",
+    "\n",
+    "### 2. **Semplificazioni per principianti**\n",
+    "- L'esempio iniziale con `parent()` che restituisce funzioni è troppo astratto. Iniziare con:\n",
+    "```python\n",
+    "# Esempio più semplice: una funzione che modifica un'altra\n",
+    "def aggiungi_saluto(func):\n",
+    "    def wrapper():\n",
+    "        print(\"Ciao!\")\n",
+    "        func()\n",
+    "        print(\"Arrivederci!\")\n",
+    "    return wrapper\n",
+    "```\n",
+    "\n",
+    "### 3. **Spiegazioni mancanti**\n",
+    "- Prima di usare `*args, **kwargs`, aggiungere una breve spiegazione o un box informativo\n",
+    "- Chiarire meglio la differenza tra `@classmethod` e `@staticmethod` con esempi concreti\n",
+    "\n",
+    "### 4. **Esempi pratici per fisici**\n",
+    "Aggiungere decoratori utili per applicazioni scientifiche:\n",
+    "```python\n",
+    "import time\n",
+    "\n",
+    "def cronometra(func):\n",
+    "    \"\"\"Misura il tempo di esecuzione di una funzione\"\"\"\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        inizio = time.time()\n",
+    "        risultato = func(*args, **kwargs)\n",
+    "        fine = time.time()\n",
+    "        print(f\"Tempo di esecuzione: {fine-inizio:.4f} secondi\")\n",
+    "        return risultato\n",
+    "    return wrapper\n",
+    "\n",
+    "def valida_positivo(func):\n",
+    "    \"\"\"Verifica che tutti gli argomenti siano positivi\"\"\"\n",
+    "    def wrapper(*args):\n",
+    "        if any(arg < 0 for arg in args if isinstance(arg, (int, float))):\n",
+    "            raise ValueError(\"Tutti i parametri devono essere positivi\")\n",
+    "        return func(*args)\n",
+    "    return wrapper\n",
+    "```\n",
+    "\n",
+    "### 5. **Visualizzazione del concetto**\n",
+    "Aggiungere uno schema che mostri come il decoratore \"avvolge\" la funzione:\n",
+    "```\n",
+    "Funzione originale:  [   func()   ]\n",
+    "                          ↓\n",
+    "Decoratore:        [ pre | func() | post ]\n",
+    "```\n",
+    "\n",
+    "### 6. **Esercizi graduali**\n",
+    "Aggiungere esercizi progressivi:\n",
+    "1. Creare un decoratore che stampa \"Inizio\" e \"Fine\"\n",
+    "2. Modificare per contare quante volte viene chiamata una funzione\n",
+    "3. Creare un decoratore che memorizza i risultati (memoization)\n",
+    "\n",
+    "## Sommario dei concetti principali\n",
+    "\n",
+    "### **Fondamenti dei Decoratori**\n",
+    "\n",
+    "#### **1. Funzioni come First-Class Objects** (§1.1)\n",
+    "- Le funzioni sono oggetti che possono essere:\n",
+    "  - Passati come argomenti\n",
+    "  - Restituiti da altre funzioni\n",
+    "  - Assegnati a variabili\n",
+    "  - Definiti dentro altre funzioni\n",
+    "- Questo permette la programmazione funzionale e i pattern avanzati\n",
+    "\n",
+    "#### **2. Meccanismo dei Decoratori** (§1.1.1)\n",
+    "- **Definizione**: Funzione che modifica il comportamento di un'altra funzione senza modificarne il codice\n",
+    "- **Pattern base**:\n",
+    "  ```python\n",
+    "  def decoratore(func):\n",
+    "      def wrapper():\n",
+    "          # codice prima\n",
+    "          risultato = func()\n",
+    "          # codice dopo\n",
+    "          return risultato\n",
+    "      return wrapper\n",
+    "  ```\n",
+    "- Il wrapper \"avvolge\" la funzione originale aggiungendo funzionalità\n",
+    "\n",
+    "#### **3. Sintassi @** (§1.1.2)\n",
+    "- `@decoratore` è equivalente a `funzione = decoratore(funzione)`\n",
+    "- Più leggibile e pythonico\n",
+    "- Può essere concatenato (decoratori multipli)\n",
+    "\n",
+    "#### **4. Decoratori Parametrizzati** (§1.3-1.4)\n",
+    "- **Con argomenti**: uso di `*args, **kwargs` per funzioni generiche\n",
+    "- **Con return**: il wrapper deve restituire il risultato\n",
+    "- **@functools.wraps**: preserva metadati (nome, docstring)\n",
+    "\n",
+    "#### **5. Decoratori per Classi** (§1.5)\n",
+    "\n",
+    "| Decoratore | Scopo | Primo parametro |\n",
+    "|------------|-------|-----------------|\n",
+    "| @property | Attributo calcolato | self |\n",
+    "| @nome.setter | Modifica property | self |\n",
+    "| @classmethod | Metodo di classe | cls |\n",
+    "| @staticmethod | Metodo indipendente | nessuno |\n",
+    "\n",
+    "### **Applicazioni Pratiche**\n",
+    "\n",
+    "1. **Validazione Input**: Controllare parametri prima dell'esecuzione\n",
+    "2. **Logging/Debug**: Tracciare esecuzione del codice\n",
+    "3. **Performance**: Misurare tempi di esecuzione\n",
+    "4. **Caching**: Memorizzare risultati costosi\n",
+    "5. **Access Control**: Limitare accesso a funzioni\n",
+    "\n",
+    "### **Pattern Avanzati**\n",
+    "- **Decoratori con stato**: Usare classi come decoratori\n",
+    "- **Decoratori parametrizzati**: Decoratori che accettano argomenti\n",
+    "- **Chaining**: Applicare più decoratori in sequenza\n",
+    "\n",
+    "### **Best Practices**\n",
+    "1. Sempre usare `@functools.wraps` per preservare metadati\n",
+    "2. Mantenere i decoratori semplici (single responsibility)\n",
+    "3. Documentare chiaramente il comportamento\n",
+    "4. Testare separatamente decoratore e funzione decorata\n",
+    "5. Considerare l'ordine quando si usano decoratori multipli\n",
+    "\n",
+    "### **Vantaggi nell'uso dei Decoratori**\n",
+    "- **Separazione delle responsabilità**: Logica principale vs. concerns trasversali\n",
+    "- **Riusabilità**: Un decoratore può essere applicato a molte funzioni\n",
+    "- **Leggibilità**: Il codice principale rimane pulito\n",
+    "- **Manutenibilità**: Modifiche centralizzate nel decoratore\n",
+    "\n",
+    "I decoratori rappresentano un pattern potente per estendere funzionalità in modo modulare e riutilizzabile, fondamentale per scrivere codice Python idiomatico e mantenibile."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -996,7 +1270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
