--- a/ipynb/Algorithm_FactorialTrailingZeroes.ipynb
+++ b/ipynb/Algorithm_FactorialTrailingZeroes.ipynb
@@ -13,9 +13,9 @@
     "    Metodo:\n",
     "    Determina successivamente la posizione nella tabellina del 5, 25, 125 etc\n",
     "    Essendo n! = 1*2*.....*n, se la parte intera di n/5 è k1 ci sono k1 interi contenuti nella tabellina del 5 in n!.\n",
-    "    Ognuno contribuisce un fattore 10 perchè ci sono sempre abbastanza fattori 2.\n",
+    "    Ognuno contribuisce un fattore 10 perch&eacute; ci sono sempre abbastanza fattori 2.\n",
     "    Se la parte intera di n/25 è k2 ci sono k2 interi contenuti nella tabellina del 25 in n!.\n",
-    "    Ognuno contribuisce un fattore 100, ma un fattore 10 era già stato incluso perchè tutti gli interi nella tabellina del 25\n",
+    "    Ognuno contribuisce un fattore 100, ma un fattore 10 era già stato incluso perch&eacute; tutti gli interi nella tabellina del 25\n",
     "    erano anche presenti nella tabellina del 5.\n",
     "    Il numero di zeri finali è quindi k1+k2+....+kp dove 5**p è la massima potenza di 5 minore di n.\n",
     "    \n",
