--- a/ipynb/Simulazione_MonteCarlo.ipynb
+++ b/ipynb/Simulazione_MonteCarlo.ipynb
@@ -365,7 +365,7 @@
     "        d=np.random.exponential(lam)\n",
     "        Xpos=np.array([0,0,d])\n",
     "        Xpos_old=np.array([0,0,0])\n",
-    "        delta_X=Xpos     # Necessario perchè uso delta_X per calcolare il coseno del fotone finale\n",
+    "        delta_X=Xpos     # Necessario perch&eacute; uso delta_X per calcolare il coseno del fotone finale\n",
     "#        print(Xpos)\n",
     "# Interazioni successive. Stop quando il fotone esce dalla lastra.    \n",
     "        while 0 < Xpos[2] < zmax:\n",
@@ -378,7 +378,7 @@
     "            mat=np.dot(R_M(ctheta,phi),mat) # accumulate rotations\n",
     "            delta_X=np.dot(mat,d)\n",
     "            Xpos_old=np.copy(Xpos)\n",
-    "# Xpos_old=Xpos non funzionerebbe. Perchè?\n",
+    "# Xpos_old=Xpos non funzionerebbe. Perch&eacute;?\n",
     "# Neanche  Xpos_old=Xpos[:] che invece va bene per le liste.\n",
     "            Xpos+=delta_X\n",
     "#            print(Xpos)\n",
@@ -513,11 +513,74 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Il notebook è ben strutturato per un corso introduttivo. Ecco alcuni suggerimenti di miglioramento:\n",
+    "\n",
+    "## Suggerimenti di miglioramento\n",
+    "\n",
+    "### 1. **Documentazione e commenti**\n",
+    "- Nella funzione `new_step`, aggiungere commenti più dettagliati sui parametri della distribuzione Thomson\n",
+    "- Spiegare meglio il significato fisico del parametro `beta` (lunghezza di attenuazione)\n",
+    "- Nella funzione `MC_gamma`, i plot di controllo andrebbero resi opzionali con un parametro booleano\n",
+    "\n",
+    "### 2. **Struttura del codice**\n",
+    "```python\n",
+    "def MC_gamma(ngamma, zmax, lam, nbin, debug_plots=False):\n",
+    "    \"\"\"\n",
+    "    Aggiungere una docstring più completa con:\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    Returns\n",
+    "    -------\n",
+    "    \"\"\"\n",
+    "```\n",
+    "\n",
+    "### 3. **Efficienza computazionale**\n",
+    "- Le liste `dist_c`, `dist_phi`, `dist_dz`, `dist_X1` crescono dinamicamente, meglio pre-allocare se possibile\n",
+    "- Considerare l'uso di NumPy arrays invece di liste per migliori performance\n",
+    "\n",
+    "### 4. **Chiarezza didattica**\n",
+    "- Aggiungere una cella che verifichi la normalizzazione della distribuzione Thomson\n",
+    "- Mostrare graficamente il confronto tra distribuzione teorica e simulata\n",
+    "- Aggiungere print statements per mostrare la frazione di fotoni che escono dalla lastra\n",
+    "\n",
+    "### 5. **Gestione errori**\n",
+    "- Aggiungere controlli sui parametri di input (es. `lam > 0`, `ngamma > 0`)\n",
+    "- Gestire il caso limite quando tutti i fotoni vengono assorbiti\n",
+    "\n",
+    "### 6. **Visualizzazione**\n",
+    "- I titoli dei grafici potrebbero essere più descrittivi\n",
+    "- Aggiungere unità di misura dove mancano\n",
+    "- Considerare l'uso di subplot per organizzare meglio i plot di controllo\n",
+    "\n",
+    "## Sommario dei concetti principali\n",
+    "\n",
+    "### **Fisica simulata**\n",
+    "- **Attenuazione esponenziale**: I fotoni attraversano un materiale con probabilità di interazione che decade esponenzialmente con la distanza (`P(z) = (1/λ)exp(-z/λ)`)\n",
+    "- **Scattering Thomson**: Distribuzione angolare dello scattering data da `Q(cosθ,φ) = (3/16π)(1+cos²θ)`\n",
+    "- **Random walk 3D**: Simulazione del percorso casuale di fotoni attraverso interazioni successive\n",
+    "\n",
+    "### **Tecniche computazionali**\n",
+    "1. **Metodo Monte Carlo**: Simulazione stocastica di processi fisici usando numeri casuali\n",
+    "2. **Generazione di distribuzioni custom**: \n",
+    "   - Metodo acceptance-rejection per distribuzioni non uniformi\n",
+    "   - Trasformazione inversa per l'esponenziale\n",
+    "3. **Trasformazioni geometriche**: Uso di matrici di rotazione per tracciare le traiettorie 3D\n",
+    "\n",
+    "### **Strutture di programmazione**\n",
+    "- **Funzioni modulari**: Separazione logica tra generazione di step, rotazioni e simulazione principale\n",
+    "- **Accumulo di rotazioni**: Composizione di trasformazioni successive mediante prodotto matriciale\n",
+    "- **Condizioni di terminazione**: Il fotone esce quando `z > zmax` o `z < 0`\n",
+    "\n",
+    "### **Output e analisi**\n",
+    "- **Distribuzione angolare finale**: Coseno dell'angolo di uscita dei fotoni\n",
+    "- **Frazione di trasmissione**: `nout/ngamma` rappresenta la trasparenza del materiale\n",
+    "- **Validazione**: I plot di controllo verificano che le distribuzioni generate siano corrette\n",
+    "\n",
+    "Il notebook costituisce un eccellente esempio di come combinare fisica computazionale con concetti di programmazione fondamentali, adatto per studenti al primo anno."
+   ]
   }
  ],
  "metadata": {
@@ -536,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
