--- a/ipynb/11_MetodoMontecarlo.ipynb
+++ b/ipynb/11_MetodoMontecarlo.ipynb
@@ -828,6 +828,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il notebook è ben strutturato e copre concetti importanti del metodo Monte Carlo. Ecco alcuni suggerimenti per migliorarlo:\n",
+    "\n",
+    "## Suggerimenti di miglioramento\n",
+    "\n",
+    "### 1. **Documentazione e spiegazioni**\n",
+    "- Nella sezione 1.3.1, dopo aver spiegato il metodo hit-and-miss, sarebbe utile aggiungere un commento che spieghi perch&eacute; il codice separa i valori in `x1val` e `x2val` prima di applicare il test di accettazione.\n",
+    "- Aggiungere più commenti inline nel codice, specialmente nelle funzioni più complesse come `craps_once()`.\n",
+    "\n",
+    "### 2. **Visualizzazioni**\n",
+    "- Nella sezione 1.3.1, aggiungere un grafico che mostri visivamente il metodo hit-and-miss con i punti accettati e rifiutati.\n",
+    "- Per la sezione del Craps, considerare un grafico che mostri la convergenza della probabilità stimata al valore teorico all'aumentare del numero di simulazioni.\n",
+    "\n",
+    "### 3. **Correzioni e chiarimenti**\n",
+    "- Nel codice della sezione 1.2, c'è un commento \"Confrontate il risultato con quello fornito dal metodo dei trapezi\" ma non viene mostrato questo confronto.\n",
+    "- Nella funzione `generate_f`, il parametro `max` dovrebbe essere rinominato per evitare conflitti con la funzione built-in `max()`.\n",
+    "\n",
+    "### 4. **Esempi didattici aggiuntivi**\n",
+    "- Aggiungere un esempio più semplice prima del Craps (es. lancio di una moneta) per introdurre gradualmente la simulazione di processi stocastici.\n",
+    "- Mostrare esplicitamente il calcolo teorico della probabilità di vincita al Craps per confronto.\n",
+    "\n",
+    "### 5. **Gestione degli errori**\n",
+    "- Aggiungere validazione degli input nelle funzioni (es. verificare che `n` sia positivo in `craps_probability`).\n",
+    "\n",
+    "## Sommario dei concetti principali\n",
+    "\n",
+    "### **Concetti Fondamentali del Metodo Monte Carlo**\n",
+    "\n",
+    "1. **Integrazione numerica Monte Carlo** (Sezione 1.2)\n",
+    "   - Basata sul teorema del valor medio: l'integrale equivale al prodotto dell'intervallo per il valor medio della funzione\n",
+    "   - La precisione aumenta con il numero di punti casuali utilizzati\n",
+    "   - Vantaggi: facilmente estendibile a dimensioni multiple dove altri metodi diventano impraticabili\n",
+    "\n",
+    "2. **Generazione di distribuzioni di probabilità** (Sezione 1.3)\n",
+    "   - **Metodo hit-and-miss**: genera punti casuali uniformi e li accetta/rifiuta in base alla distribuzione desiderata\n",
+    "   - Principio: la probabilità di accettazione in una regione è proporzionale al valore della funzione di densità\n",
+    "\n",
+    "3. **Propagazione degli errori** (Sezione 1.4)\n",
+    "   - Monte Carlo permette di stimare l'incertezza su grandezze derivate senza calcoli analitici complessi\n",
+    "   - Si generano campioni dalle distribuzioni delle variabili di input e si calcola la distribuzione dell'output\n",
+    "   - Il metodo cattura automaticamente correlazioni e non-linearità\n",
+    "\n",
+    "4. **Simulazione di processi stocastici** (Sezione 1.5)\n",
+    "   - Esempio del gioco Craps: simulazione di eventi sequenziali con regole probabilistiche\n",
+    "   - La legge dei grandi numeri garantisce la convergenza delle stime alle probabilità teoriche\n",
+    "   - Permette di studiare sistemi complessi difficili da analizzare analiticamente\n",
+    "\n",
+    "### **Principi chiave**\n",
+    "- **Casualit&agrave; controllata**: uso di generatori pseudo-casuali per risultati riproducibili\n",
+    "- **Convergenza statistica**: l'accuratezza migliora con $\\sqrt{n}$ ($n$ = numero di campioni)\n",
+    "- **Versatilit&agrave;**: applicabile a problemi di integrazione, ottimizzazione, e simulazione\n",
+    "- **Trade-off**: richiede molte iterazioni per alta precisione, ma gestisce facilmente problemi multidimensionali\n",
+    "\n",
+    "Il notebook fornisce una solida introduzione pratica al metodo Monte Carlo, con esempi progressivamente più complessi che mostrano la potenza e versatilità di questo approccio computazionale."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -851,7 +910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
