--- a/ipynb/13_Classi.ipynb
+++ b/ipynb/13_Classi.ipynb
@@ -1167,7 +1167,7 @@
     }
    ],
    "source": [
-    "type(my_circle)      # perchè stampa __main__.Circle? "
+    "type(my_circle)      # perch&eacute; stampa __main__.Circle? "
    ]
   },
   {
@@ -1193,9 +1193,9 @@
     }
    ],
    "source": [
-    "print(f\"my_ircle area: {my_circle.area():.2f}, perimeter: {circle.perimeter():.2f}\")\n",
+    "print(f\"my_circle area: {my_circle.area():.2f}, perimeter: {my_circle.perimeter():.2f}\")\n",
     "print(f\"circle1 area: {circle1.area():.2f}, perimeter: {circle1.perimeter():.2f}\")\n",
-    "print(f\"my_rectangle area: {my_rectangle.area():.2f}, perimeter: {rectangle.perimeter():.2f}\")"
+    "print(f\"my_rectangle area: {my_rectangle.area():.2f}, perimeter: {my_rectangle.perimeter():.2f}\")"
    ]
   },
   {
@@ -1273,11 +1273,114 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Il notebook è ben strutturato per introdurre i concetti OOP. Ecco i miei suggerimenti di miglioramento:\n",
+    "\n",
+    "## Suggerimenti di miglioramento\n",
+    "\n",
+    "### 1. **Correzioni necessarie**\n",
+    "- Nell'esempio finale (Sezione 1.4, Esempio 5), ci sono errori di battitura:\n",
+    "  ```python\n",
+    "  print(f\"my_ircle area: {my_circle.area():.2f}, perimeter: {circle.perimeter():.2f}\")\n",
+    "  # dovrebbe essere my_circle invece di my_ircle e circle\n",
+    "  ```\n",
+    "- Le variabili `circle` e `rectangle` non sono definite ma vengono usate. Dovrebbero essere `my_circle` e `my_rectangle`.\n",
+    "\n",
+    "### 2. **Chiarimenti concettuali**\n",
+    "- **super()**: Il commento \"super() va chiarito\" è corretto. Suggerirei di aggiungere una spiegazione:\n",
+    "  ```python\n",
+    "  # super() permette di chiamare metodi della classe padre\n",
+    "  # super().__init__() chiama il costruttore della classe padre\n",
+    "  # È preferibile a Shape.__init__(self, 'circle') perch&eacute; più flessibile\n",
+    "  ```\n",
+    "\n",
+    "- **Metodo `__main__`**: Quando viene stampato `__main__.Circle`, aggiungere una nota che spiega che `__main__` indica che la classe è stata definita nel notebook corrente, non in un modulo importato.\n",
+    "\n",
+    "### 3. **Esempi più graduali**\n",
+    "- Prima della classe `Coordinate`, aggiungere un esempio più semplice (es. una classe `Counter` con solo increment/decrement)\n",
+    "- Nella classe `Fraction`, aggiungere controlli di validità:\n",
+    "  ```python\n",
+    "  def __init__(self, n, d=1):\n",
+    "      if d == 0:\n",
+    "          raise ValueError(\"Il denominatore non può essere zero\")\n",
+    "      if not isinstance(n, int) or not isinstance(d, int):\n",
+    "          raise TypeError(\"Numeratore e denominatore devono essere interi\")\n",
+    "  ```\n",
+    "\n",
+    "### 4. **Best practices mancanti**\n",
+    "- Aggiungere un esempio di **docstring** nelle classi:\n",
+    "  ```python\n",
+    "  class Coordinate(object):\n",
+    "      \"\"\"Rappresenta un punto nel piano cartesiano.\n",
+    "      \n",
+    "      Attributes:\n",
+    "          x (float): coordinata x\n",
+    "          y (float): coordinata y\n",
+    "      \"\"\"\n",
+    "  ```\n",
+    "\n",
+    "### 5. **Esercizi pratici**\n",
+    "Aggiungere esercizi graduali alla fine di ogni sezione, per esempio:\n",
+    "- Creare una classe `Book` con titolo, autore, numero di pagine\n",
+    "- Estendere `Student` con una classe `GraduateStudent` che ha un supervisore\n",
+    "- Implementare `__lt__` nella classe `Fraction` per permettere ordinamento\n",
+    "\n",
+    "### 6. **Visualizzazioni**\n",
+    "- Un diagramma UML semplificato per mostrare le relazioni di ereditarietà\n",
+    "- Un confronto visivo tra accesso diretto agli attributi vs. uso di getter/setter\n",
+    "\n",
+    "## Sommario dei concetti principali\n",
+    "\n",
+    "### **Fondamenti della Programmazione Orientata agli Oggetti (OOP)**\n",
+    "\n",
+    "1. **Concetti base** (Sezione 1.1)\n",
+    "   - **Oggetto**: Entità con tipo, rappresentazione interna e metodi\n",
+    "   - **Classe**: Template per creare oggetti (blueprint)\n",
+    "   - **Istanza/Esemplare**: Oggetto specifico creato da una classe\n",
+    "   - In Python tutto è un oggetto\n",
+    "\n",
+    "2. **Creazione di classi** (Sezione 1.2)\n",
+    "   - `class NomeClasse(object):` - sintassi di definizione\n",
+    "   - `__init__(self, parametri)` - costruttore per inizializzare istanze\n",
+    "   - `self` - riferimento all'istanza corrente\n",
+    "   - Attributi di istanza: dati specifici di ogni oggetto\n",
+    "\n",
+    "3. **Metodi** (Sezione 1.3)\n",
+    "   - Funzioni definite dentro la classe\n",
+    "   - Primo parametro sempre `self`\n",
+    "   - **Metodi speciali** (dunder methods):\n",
+    "     - `__str__`: rappresentazione stringa dell'oggetto\n",
+    "     - `__add__`, `__sub__`, `__mul__`, `__truediv__`: operatori aritmetici\n",
+    "     - `__eq__`, `__lt__`: operatori di confronto\n",
+    "     - `__neg__`: operatore unario\n",
+    "\n",
+    "4. **Incapsulamento** (Sezione 1.3.3)\n",
+    "   - **Getter**: metodi per leggere attributi (`get_name()`)\n",
+    "   - **Setter**: metodi per modificare attributi (`set_name()`)\n",
+    "   - Principio: nascondere l'implementazione interna, esporre solo l'interfaccia\n",
+    "\n",
+    "5. **Ereditarietà** (Sezione 1.4)\n",
+    "   - `class Sottoclasse(Superclasse):` - sintassi\n",
+    "   - La sottoclasse eredita attributi e metodi della superclasse\n",
+    "   - **Override**: ridefinizione di metodi nella sottoclasse\n",
+    "   - **Estensione**: aggiunta di nuovi attributi/metodi\n",
+    "   - `super()`: accesso alla classe padre\n",
+    "   - **Gerarchia**: Animal → Cat, Person → Student\n",
+    "\n",
+    "6. **Attributi di classe vs. istanza**\n",
+    "   - Attributi di istanza: specifici per ogni oggetto (`self.name`)\n",
+    "   - Attributi di classe: condivisi tra tutte le istanze (`Rabbit.tag`)\n",
+    "\n",
+    "### **Principi chiave OOP dimostrati**\n",
+    "- **Astrazione**: nascondere la complessità (es. metodo `distance`)\n",
+    "- **Incapsulamento**: proteggere i dati con getter/setter\n",
+    "- **Ereditarietà**: riuso del codice e specializzazione\n",
+    "- **Polimorfismo**: stesso metodo con comportamenti diversi (`speak()` in Cat vs Person)\n",
+    "\n",
+    "Il notebook fornisce una solida introduzione all'OOP, passando da concetti semplici a esempi via via più complessi che dimostrano la potenza e flessibilità della programmazione orientata agli oggetti."
+   ]
   },
   {
    "cell_type": "code",
@@ -1305,7 +1408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
