--- a/ipynb/11_MetodoMontecarlo.ipynb
+++ b/ipynb/11_MetodoMontecarlo.ipynb
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stima dell'integrale: 2.398983709271334\n",
+      "Stima dell'integrale: 2.6155133014439764\n",
       "Risultato esatto: 2.3333333333333335\n"
      ]
     }
@@ -122,7 +122,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Confrontate il risultato con quello fornito dal metodo dei trapezi e da `quad` nel notebook 10_scipy."
+    "<div style = \"width:95%; padding:5px 10px 5px; border-style:solid; border-width:0px 0px 0px 10px; border-color:#b8d0d0; margin:20px 0px 10px 10px\">\n",
+    "    <h4> Imparare Facendo</h4>\n",
+    "    \n",
+    "<OL>\n",
+    "<LI>Confrontate il risultato con quello fornito dal metodo dei trapezi e da `quad` nel notebook 10_scipy.</LI>\n",
+    "</OL>\n",
+    "</div>"
    ]
   },
   {
@@ -217,30 +223,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numero di punti in [0,0.5]: 136\n",
-      "Numero di punti in [0.5,1]: 362\n",
-      "rapporto fra i numeri di punti: 2.661764705882353 rapporto atteso=7/3: 2.3333333333333335\n"
+      "Numero di punti in [0,0.5]: 156\n",
+      "Numero di punti in [0.5,1]: 347\n",
+      "rapporto fra i numeri di punti: 2.2243589743589745 rapporto atteso=7/3: 2.3333333333333335\n"
      ]
     }
    ],
    "source": [
     "npoints=1000\n",
-    "# npoints = 1000000\n",
+    "#npoints = 1000000\n",
     "xval=rng.uniform(size=npoints)\n",
-    "# Separo i valori minori/maggiori di 0.5\n",
+    "# Separo i valori della coordinata x che cadono nel primo bin da quelli che cadono nel secondo (minori/maggiori di 0.5).\n",
     "x1val=[x for x in xval if x < 0.5]\n",
     "x2val=[x for x in xval if x > 0.5]\n",
     "\n",
+    "# Altezza della distribuzione nei due bin\n",
     "y1=0.6\n",
     "y2=1.4\n",
     "\n",
+    "# Per ogni coordinata x genero un numero casuale in [0,2] che rappresenta la corrispondente coordinata y.\n",
+    "# Tengo il punto se cade al di sotto della curva della distribuzione, altrimenti lo scarto.\n",
+    "# Il numero di punto accettati nei due bin, nel limite di un numero molto grande di punti,sono y1/2 e y2/2.\n",
     "x1val=[x for x in x1val if y1 > rng.uniform()*2]\n",
     "x2val=[x for x in x2val if y2 > rng.uniform()*2]\n",
     "\n",
@@ -260,26 +270,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "def generate_f(f,a,b,max):\n",
+    "def generate_f(f,a,b,max_f):\n",
     "    '''\n",
     "    Generate random points distributed according to an input distribution\n",
     "    Input:\n",
     "    f: the probability distribution\n",
     "    a,b: extrema of the range for the desired random number\n",
-    "    max: a real number such that f(x) < max for each x\n",
+    "    max_f: a real number such that f(x) < max_f for each x\n",
     "    Returns:\n",
     "    ranval: random number\n",
     "    '''\n",
     "    not_found=True\n",
     "    while not_found:\n",
     "        x=rng.uniform(a,b)\n",
-    "        y=rng.uniform(0,max)\n",
+    "        y=rng.uniform(0,max_f)\n",
     "        if f(x)>y:\n",
     "            not_found=False\n",
     "    \n",
@@ -639,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -647,10 +657,10 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,6 +693,7 @@
     "        return False\n",
     "    else:\n",
     "        # Lanci successivi. Il loop infinito è interrotto dal return\n",
+    "        # se il lancio totalizza il valore del primo lancio (True -> vincita) oppure 7 (False -> perdita)\n",
     "        while(True):\n",
     "            roll = sum(rng.integers(1,high=7,size=2))\n",
     "            #print('++',roll,'++')\n",
@@ -835,24 +846,9 @@
     "\n",
     "## Suggerimenti di miglioramento\n",
     "\n",
-    "### 1. **Documentazione e spiegazioni**\n",
-    "- Nella sezione 1.3.1, dopo aver spiegato il metodo hit-and-miss, sarebbe utile aggiungere un commento che spieghi perch&eacute; il codice separa i valori in `x1val` e `x2val` prima di applicare il test di accettazione.\n",
-    "- Aggiungere più commenti inline nel codice, specialmente nelle funzioni più complesse come `craps_once()`.\n",
-    "\n",
-    "### 2. **Visualizzazioni**\n",
-    "- Nella sezione 1.3.1, aggiungere un grafico che mostri visivamente il metodo hit-and-miss con i punti accettati e rifiutati.\n",
-    "- Per la sezione del Craps, considerare un grafico che mostri la convergenza della probabilità stimata al valore teorico all'aumentare del numero di simulazioni.\n",
-    "\n",
-    "### 3. **Correzioni e chiarimenti**\n",
-    "- Nel codice della sezione 1.2, c'è un commento \"Confrontate il risultato con quello fornito dal metodo dei trapezi\" ma non viene mostrato questo confronto.\n",
-    "- Nella funzione `generate_f`, il parametro `max` dovrebbe essere rinominato per evitare conflitti con la funzione built-in `max()`.\n",
-    "\n",
     "### 4. **Esempi didattici aggiuntivi**\n",
     "- Aggiungere un esempio più semplice prima del Craps (es. lancio di una moneta) per introdurre gradualmente la simulazione di processi stocastici.\n",
     "- Mostrare esplicitamente il calcolo teorico della probabilità di vincita al Craps per confronto.\n",
-    "\n",
-    "### 5. **Gestione degli errori**\n",
-    "- Aggiungere validazione degli input nelle funzioni (es. verificare che `n` sia positivo in `craps_probability`).\n",
     "\n",
     "## Sommario dei concetti principali\n",
     "\n",
@@ -863,23 +859,23 @@
     "   - La precisione aumenta con il numero di punti casuali utilizzati\n",
     "   - Vantaggi: facilmente estendibile a dimensioni multiple dove altri metodi diventano impraticabili\n",
     "\n",
-    "2. **Generazione di distribuzioni di probabilità** (Sezione 1.3)\n",
+    "2. **Generazione di distribuzioni di probabilit&agrave;** (Sezione 1.3)\n",
     "   - **Metodo hit-and-miss**: genera punti casuali uniformi e li accetta/rifiuta in base alla distribuzione desiderata\n",
-    "   - Principio: la probabilità di accettazione in una regione è proporzionale al valore della funzione di densità\n",
+    "   - Principio: la probabilit&agrave; di accettazione in una regione &egrave; proporzionale al valore della funzione di densit&agrave;\n",
     "\n",
     "3. **Propagazione degli errori** (Sezione 1.4)\n",
     "   - Monte Carlo permette di stimare l'incertezza su grandezze derivate senza calcoli analitici complessi\n",
     "   - Si generano campioni dalle distribuzioni delle variabili di input e si calcola la distribuzione dell'output\n",
-    "   - Il metodo cattura automaticamente correlazioni e non-linearità\n",
+    "   - Il metodo cattura automaticamente correlazioni e non-linearit&agrave;\n",
     "\n",
     "4. **Simulazione di processi stocastici** (Sezione 1.5)\n",
     "   - Esempio del gioco Craps: simulazione di eventi sequenziali con regole probabilistiche\n",
-    "   - La legge dei grandi numeri garantisce la convergenza delle stime alle probabilità teoriche\n",
+    "   - La legge dei grandi numeri garantisce la convergenza delle stime alle probabilit&agrave; teoriche\n",
     "   - Permette di studiare sistemi complessi difficili da analizzare analiticamente\n",
     "\n",
     "### **Principi chiave**\n",
     "- **Casualit&agrave; controllata**: uso di generatori pseudo-casuali per risultati riproducibili\n",
-    "- **Convergenza statistica**: l'accuratezza migliora con $\\sqrt{n}$ ($n$ = numero di campioni)\n",
+    "- **Convergenza statistica**: l'accuratezza migliora proporzionalmente a $\\sqrt{n}$ ($n$ = numero di campioni)\n",
     "- **Versatilit&agrave;**: applicabile a problemi di integrazione, ottimizzazione, e simulazione\n",
     "- **Trade-off**: richiede molte iterazioni per alta precisione, ma gestisce facilmente problemi multidimensionali\n",
     "\n",
